--- a/ᎭᏰᎳᏍᏗ.mw
+++ b/ᎭᏰᎳᏍᏗ.mw
@@ -208,6 +208,7 @@ Honing ᎠᏂᏅᏯ (ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ [[Sharpening stone#Oil sto
 [[Category:Food utensils]]
 [[Category:Hiking equipment]]
 
+{{Link FA|ru}}
 
 [[an:Cuitiello]]
 [[ar:سكين]]
