--- a/ᏌᎶᎵ.mw
+++ b/ᏌᎶᎵ.mw
@@ -18,7 +18,7 @@ Many, see the article ''Sciuridae''.
 == ᎣᎾᏗᏢ ==
 [[File:Squirrel7778.JPG|thumb|200px|left|European ᎩᎦᎨ ᏌᎶᎵ (''Sciurus vulgaris'')]] ᏫᏚᏳᎪᏛ ᏌᎶᎵ ᎠᏠᏯᏍᏛ ᎯᎠ [[Europe]][[Red Squirrel|ᎩᎦᎨ ᏌᎶᎵ]] ''Sciurus vulgaris'', ᎯᎠ [[Fox Squirrel|ᏧᎳ ᏌᎶᎵ]] ''. niger'', ᎯᎠ [[Eastern Gray Squirrel|ᎧᎸᎬᎢᏗᏢ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᏌᎶᎵ]] ''. carolinensis'', ᎯᎠ [[Western Gray Squirrel|ᏭᏕᎵᎬᏗᏢ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᏌᎶᎵ]] ''. griseus'', ᎯᎠ [[Douglas Squirrel|Douglas ᏌᎶᎵ]] '' Tamiasciurus douglasii,'' ᎠᎴ ᎯᎠ [[American Red Squirrel|ᏴᏩᏁᎬ ᎩᎦᎨ ᏌᎶᎵ]] ''Tamiasciurus hudsonicus''. 
 
-ᎯᎠ "[[Black Squirrel|ᎬᎿᎨ ᏌᎶᎵ]]" ᎨᏒᎢ ᎤᏙᎯᏳᎯᏯ variant ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᏌᎶᎵ. ᎾᏍᎩ ᎨᏒᎢ ᏁᎵᏒ Ꮎ ᎯᎠ ᎬᎿᎨ variant ᎤᏙᎷᏩᏛᏓ Ꮝ ᎤᎳᏏᎩ ᎦᏌᎴᎾ ᎤᏟ ᎢᏲᏍᏛ ᎠᎧᏲᏙᏗ ᎤᎦᎾᏭ ᎭᏫᎾᏗᏢ colder [[climate|ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ]]. ᎾᏍᎩ ᎤᏁᎳᎩ ᎠᎦᏎᏍᏔᏅ ᎢᏳᏓᎵᎭ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎡᏍᎦᏂ, ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎾᏓᏛᏂᏌᏁᎲ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ [[Ontario]], [[Quebec]], ᎤᏙᎯᏳ ᎡᏍᎦᏂ ᎯᎠ [[Northeastern United States|Northeastern ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], ᎠᎴ ᏥᏄᏍᏗ ᎢᏅ ᎤᎦᎾᏭ ᏥᏄᏍᏗ [[Maryland]] ᎠᎴ [[Virginia]]. ᎬᎿᎨ ᏌᎶᎵ, ᎦᎾᏄᎪᎬᎢ ᎾᏍᏋ ᎤᏠᏱ ᎯᎠ ᎩᎦᎨ ᏌᎶᎵ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏍᎦᏂ, ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏰᎵ ᎣᏏ ᏧᏣᏔᏊ ᎭᏫᎾᏗᏢ ᎯᎠ midwestern [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], ᎾᏍᎩᎾ ᎨᏒ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎾᎥ ᏄᎾᏓᎸ ᎭᏫᎾᏗᏢ southwestern [[Iowa]], ᏯᏛᎿ ᏥᏄᏍᏗ [[Council Bluffs, Iowa|ᏗᏂᎳᏫᎩ ᎠᏓᎾᏰᏍᏙᏗ]], [[Manilla, Iowa|Manilla]], ᎠᎴ [[Missouri Valley, Iowa|Missouri ᎤᎨᏓᎵᏴ]].  ᎬᎿᎨ ᏌᎶᎵ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ [[Marysville, Kansas]], [[Omaha, Nebraska]] ᎠᎴ ᎭᏫᏂᏗᏢ ᎯᎠ ᎾᎥᏂᎨᏍᏙᏗ Stuyvesant ᎦᏚᎲ ᎭᏫᎾᏗᏢ ᎢᏤ York ᎦᏚᎲᎢ.  ᎭᏫᎾᏗᏢ ᎯᎠ [[United Kingdom|ᎠᏫᏒᏗ ᎠᏰᎵ ᎤᎾᏙᏢᏒ]], ᎤᎾᏓᏡᎩ ᎢᏳᎾᏓᎵ ᎬᎿᎨ ᏌᎶᎵ ᎤᎭ existed yvwatuwidv ᎯᎠ ᎦᏚᎲ [[Letchworth]] ᎠᏫᏒᏅ ᎦᏚᎲᎢ ᎾᏍᎩᎾᎢ ᎤᎪᏗᏗ ᏧᏕᏘᏴᏓ. ᎤᏅᏌ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎠᎪᎲᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏧᎳ ᎥᏓᎵ ᎡᏍᎦᏂ ᎭᏫᎾᏗᏢ [[Illinois]] ᎠᎴ ᎤᏴᏢ ᎢᏗᏢ Ohio.
+ᎯᎠ "[[Black Squirrel|ᎬᎿᎨ ᏌᎶᎵ]]" ᎨᏒᎢ ᎤᏙᎯᏳᎯᏯ variant ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᏌᎶᎵ. ᎾᏍᎩ ᎨᏒᎢ ᏁᎵᏒ Ꮎ ᎯᎠ ᎬᎿᎨ variant ᎤᏙᎷᏩᏛᏓ Ꮝ ᎤᎳᏏᎩ ᎦᏌᎴᎾ ᎤᏟ ᎢᏲᏍᏛ ᎠᎧᏲᏙᏗ ᎤᎦᎾᏭ ᎭᏫᎾᏗᏢ colder [[climate|ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ]]. ᎾᏍᎩ ᎤᏁᎳᎩ ᎠᎦᏎᏍᏔᏅ ᎢᏳᏓᎵᎭ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎡᏍᎦᏂ, ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᎾᏓᏛᏂᏌᏁᎲ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ [[Ontario]], [[Quebec]], ᎤᏙᎯᏳ ᎡᏍᎦᏂ ᎯᎠ [[Northeastern United States|Northeastern ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], ᎠᎴ ᏥᏄᏍᏗ ᎢᏅ ᎤᎦᎾᏭ ᏥᏄᏍᏗ [[Maryland]] ᎠᎴ [[Virginia]]. ᎬᎿᎨ ᏌᎶᎵ, ᎦᎾᏄᎪᎬᎢ ᎾᏍᏋ ᎤᏠᏱ ᎯᎠ ᎩᎦᎨ ᏌᎶᎵ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏍᎦᏂ, ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏰᎵ ᎣᏏ ᏧᏣᏔᏊ ᎭᏫᎾᏗᏢ ᎯᎠ midwestern [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], ᎾᏍᎩᎾ ᎨᏒ ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎾᎥ ᏄᎾᏓᎸ ᎭᏫᎾᏗᏢ southwestern [[Iowa]], ᏯᏛᎿ ᏥᏄᏍᏗ [[Council Bluffs, Iowa|ᏗᏂᎳᏫᎩ ᎠᏓᎾᏰᏍᏙᏗ]], [[Manilla, Iowa|Manilla]], ᎠᎴ [[Missouri Valley, Iowa|Missouri ᎤᎨᏓᎵᏴ]].  ᎬᎿᎨ ᏌᎶᎵ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ [[Marysville, Kansas]], [[Omaha, Nebraska]] ᎠᎴ ᎭᏫᏂᏗᏢ ᎯᎠ ᎾᎥᏂᎨᏍᏙᏗ Stuyvesant ᎦᏚᎲ ᎭᏫᎾᏗᏢ ᎢᏤ York ᎦᏚᎲᎢ.  ᎭᏫᎾᏗᏢ ᎯᎠ [[United Kingdom|ᎠᏫᏒᏗ ᎠᏰᎵ ᎤᎾᏙᏢᏒ]], ᎤᎾᏓᏡᎩ ᎢᏳᎾᏓᎵ ᎬᎿᎨ ᏌᎶᎵ ᎤᎭ existed yvwatuwidv ᎯᎠ ᎦᏚᎲ [[Letchworth]] ᎠᏫᏒᏅ ᎦᏚᎲᎢ ᎾᏍᎩᎾᎢ ᎤᎪᏗᏗ ᏧᏕᏘᏴᏓ. ᎤᏅᏌ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ ᏭᏪᏙᎢ ᎠᎪᎲᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏧᎳ ᎥᏓᎵ ᎡᏍᎦᏂ ᎭᏫᎾᏗᏢ [[Illinois]] ᎠᎴ ᎤᏴᏢ ᎢᏗᏢ Ohio. andy is homo
 
 ᎯᎠ ᎩᎦᎨ ᏌᎶᎵ ᎾᏂᎥ ᏴᏫ ᎭᏫᎾᏗᏢ [[United Kingdom|Britain]], [[Ireland]], ᎠᎴ, ᎤᏟ ᎢᎦᎢ ᏝᏱᎪᎯᎩ, ᎤᏴᏢ ᎢᏗᏢ [[Italy]], ᎤᎭ ᎠᏓᏱᎸ ᎠᎴ ᏗᏙᎳᎩ ᎤᏔᏂᏗ ᎦᏙᎯ [[extinct|ᎠᎧᎵᏏᏐᏗ]] ᎭᏫᎾᏗᏢ ᎾᏞᎬ ᎯᏍᎩ, ᎢᎬᏱᏗᏢ ᎢᎬᏂᏏᏍᎩ ᎠᏓᎪᏅᏙᏗᏱ ᏂᏛᎴᏅᏓ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᏌᎶᎵ (ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᏂᏛᎴᏅᏓ ᎤᏴᏢ ᎠᎺᎵᎨ), ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏗᎦᎶᎪᏗ ᎤᏲᎱᏎᎸ. ᎠᏂᏙᎾᎥ ᏓᏁᎸᏔᏅ ᎠᏠᏯᏍᏛ ᏂᎦᎾᏰᎬᎾ ᎠᎴ ᎠᏂᎧᏅᏍᎬ ᎯᎠ [[conifer]] ᎠᏙᎯ ᎢᎾᎨ Ꮎ ᎩᎦᎨ ᏌᎶᎵ ᎤᏟ ᎬᏰᎸᏗ. ᎯᎠ ᎾᏞᎬ colonisation ᎦᏙᎯ Europe ᏂᏛᎴᏅᏓ Italy ᎾᎥᎢ ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᏌᎶᎵ ᎨᏒᎢ utugi uwasv ᏄᎵᏍᏔᏅ ᎤᏩᎫᏗᏗᏒ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎧᎵᏏᏐᏗ ᎯᎠ ᎩᎦᎨ ᏌᎶᎵ ᎦᏬᎯᎸᏙᏗ ᎤᎪᏗᏗ Europe.
 [[File:blacksquirrelrev.jpg|thumb|280 px|right|ᎬᎿᎨ ᏌᎶᎵ]]
