/* ᏂᎦᏛᎢ ᎠᎴ ᎦᎶᏍᎬ */

--- a/ᏪᏌ.mw
+++ b/ᏪᏌ.mw
@@ -89,7 +89,7 @@
 
 === ᏂᎦᏛᎢ ᎠᎴ ᎦᎶᏍᎬ ===
 [[File:Cat in tree03.jpg|thumb|250px| ᏪᏌ ᎭᏫᎾᏗᏢ  ᏡᎬ -  ᏧᏣᏔᏊ ᏂᎦᎵᏍᏔᏂᏙᎲ ᎨᏒᎢ ᎾᏍᎩᎾᎢ  ᏪᏌ  ᏗᏙᎳᎩ ᎦᏗᎸ ᎦᎸᎳᏗᏢ  ᏡᎬ]]
-ᎤᎪᏗᏗ ᎠᏂᏁᏉᎬ ᏪᏌ ᎤᎭ ᎪᏪᎶᏗ ᎤᏚᎳᏗ ᎾᏍᎩᎾᎢ settling ᎭᏫᎾᏗᏢ ᎦᎸᎳᏗ ᏚᏙᏢᏒᎢ, ᎠᎴ ᏂᎦᏛᎢ.  gantlai behaviorists ᎤᎭ ᎤᏛᎯᏍᏔᏅᎩ ᏎᏍᏗ ᏗᎪᏏᏌᏅ, ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎠᎴᏂᏙᎲ Ꮎ ᏂᎦᏛᎢ ᎠᏓᏁᏗ ᎯᎠ ᏪᏌ ᎤᏟ ᎢᏲᏍᏛ ᏄᏍᏛ ᏗᎧᏃᏗ ᎪᏍᏓᏱ, ᎠᎵᏍᎪᎸᏙᏗ ᎾᏍᎩ ᎠᏟᎶᏍᏗ ᎦᏙᎯ Ꮝ "ᎾᎿ ᎨᏒ" ᎠᎴ ᏗᏙᎳᎩ gayatohvsdi activities ᏴᏫ ᎠᎴ ᏐᎢ ᎤᏓᏅᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏍᎦᏂ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎨᏯᏔᎯ, ᎦᎸᎳᏗᎨᏍᏙᏗ ᎾᎿᎢ ᎠᎾᏍᎬᏘ ᎢᏯᏓᏛᏁᏗ ᏥᏄᏍᏗ ᎤᏍᏆᏂᎪᏗ ᏄᏍᏗᏓᏅ ᏂᏛᎴᏅᏓ ᎦᏙ ᎤᏍᏗ ᎦᏃᎭᎵᏓᏍᏗ.<ref>{{cite web|title=Why Do Cats Like High Places?|publisher=Dr. Holly Nash, DVM, MS|url=http://www.peteducation.com/article.cfm?cls=1&cat=1313&articleid=1125|work=Drs. Foster & Smith, Inc.}}</ref>  ᏂᎦᏛᎢ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ, ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᏁᏗ ᏪᏌ ᎤᏓᏅᏖᏗ ᎫᏓᎸᏙ ᎠᎴ ᎬᏩᎫᏍᏓᎢ.  ᏴᏫ ᎤᎵᏌᎳᏗ ᎢᏳᏓᎵᎭ ᎠᏩᏛᏗ ᎤᏬᏢᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎶᏒᏍᏔᏅ ᏗᏟᎶᏍᏗ ᏪᏌ ᎠᎩᏍᏗ ᎠᏙᏯᏅᎯᏗᏍᏗ ᎦᎸᎳᏗ ᎪᏢᏒᎢ, ᏥᏄᏍᏗ ᎯᎠ [[internet meme|ᎧᎾᏁᏍ ᎥᏓᏓᎫᏴᎡᏗᏱ]] "[http://www.ceilingcat.com ceiling cat]" ᏗᏟᎶᏍᏙᏗ.
+ᎤᎪᏗᏗ ᎠᏂᏁᏉᎬ ᏪᏌ ᎤᎭ ᎪᏪᎶᏗ ᎤᏚᎳᏗ ᎾᏍᎩᎾᎢ settling ᎭᏫᎾᏗᏢ ᎦᎸᎳᏗ ᏚᏙᏢᏒᎢ, ᎠᎴ ᏂᎦᏛᎢ.  ᎦᎾᏝᎢ behaviorists ᎤᎭ ᎤᏛᎯᏍᏔᏅᎩ ᏎᏍᏗ ᏗᎪᏏᏌᏅ, ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎠᎴᏂᏙᎲ Ꮎ ᏂᎦᏛᎢ ᎠᏓᏁᏗ ᎯᎠ ᏪᏌ ᎤᏟ ᎢᏲᏍᏛ ᏄᏍᏛ ᏗᎧᏃᏗ ᎪᏍᏓᏱ, ᎠᎵᏍᎪᎸᏙᏗ ᎾᏍᎩ ᎠᏟᎶᏍᏗ ᎦᏙᎯ Ꮝ "ᎾᎿ ᎨᏒ" ᎠᎴ ᏗᏙᎳᎩ ᎦᏯᏦᎲᏍᏗ activities ᏴᏫ ᎠᎴ ᏐᎢ ᎤᏓᏅᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏍᎦᏂ. ᎭᏫᎾᏗᏢ ᎯᎠ ᎨᏯᏔᎯ, ᎦᎸᎳᏗᎨᏍᏙᏗ ᎾᎿᎢ ᎠᎾᏍᎬᏘ ᎢᏯᏓᏛᏁᏗ ᏥᏄᏍᏗ ᎤᏍᏆᏂᎪᏗ ᏄᏍᏗᏓᏅ ᏂᏛᎴᏅᏓ ᎦᏙ ᎤᏍᏗ ᎦᏃᎭᎵᏓᏍᏗ.<ref>{{cite web|title=Why Do Cats Like High Places?|publisher=Dr. Holly Nash, DVM, MS|url=http://www.peteducation.com/article.cfm?cls=1&cat=1313&articleid=1125|work=Drs. Foster & Smith, Inc.}}</ref>  ᏂᎦᏛᎢ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ, ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᏁᏗ ᏪᏌ ᎤᏓᏅᏖᏗ ᎫᏓᎸᏙ ᎠᎴ ᎬᏩᎫᏍᏓᎢ.  ᏴᏫ ᎤᎵᏌᎳᏗ ᎢᏳᏓᎵᎭ ᎠᏩᏛᏗ ᎤᏬᏢᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎶᏒᏍᏔᏅ ᏗᏟᎶᏍᏗ ᏪᏌ ᎠᎩᏍᏗ ᎠᏙᏯᏅᎯᏗᏍᏗ ᎦᎸᎳᏗ ᎪᏢᏒᎢ, ᏥᏄᏍᏗ ᎯᎠ [[internet meme|ᎧᎾᏁᏍ ᎥᏓᏓᎫᏴᎡᏗᏱ]] "[http://www.ceilingcat.com ceiling cat]" ᏗᏟᎶᏍᏙᏗ.
 
 ᎪᎯ ᎤᏚᎳᏗ ᎾᏍᎩᎾᎢ ᎦᎸᎳᏗ ᎤᏜᏅᏛ, ᏱᏂᎬᏛᎾ, ᏰᎵᏇ ᎦᏂᏰᎬ ᎠᎦᏛᏗ ᎯᎠ ᎤᏂᎸᏉᏗ ᎧᏁᎬᎢ Ꮎ ᏪᏌ "ᏂᎪᎯᎸᎢ ᏗᎦᏙᎯ ᎾᎿ Ꮝ ᏧᎾᎳᏏᏕᎾ."  ᎯᎠ ᏴᏩᏁᎬ ᎤᎾᏙᏢᎯ ᎾᏍᎩᎾᎢ ᎯᎠ ᎦᎵᏓᏍᏛ ᎤᎾᏰᎯᏍᏗ ᎡᎿᎢ ᎡᎥ ᎠᏕᎸ ᏗᏎᎯᏍᏗ ᎤᎾᏤᎵᎢ ᏄᎾᏰᎯᏍᏛᎾ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎦᏂᏰᎬ perches ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᏚᏁᏅᏒ, ᏗᏓᏅᏗᏍᏙᏗ "ᎦᎸᎳᏗ-ᎤᎵᏌᎳᏙᏗ syndrome," ᎭᏢᏃ ᎬᎨᏫᏍᏗ ᏪᏌ ᎦᎶᏍᎦ ᏂᏛᎴᏅᏓ ᎦᎶᏒᏍᏔᏅ ᏂᎦᏛᎢ.<ref>{{cite web|url=http://www.peteducation.com/article.cfm?cls=0&cat=2032&articleid=3409|title="High-Rise Syndrome: Cats Injured Due to Falls"|author=Veterinary & Aquatic Services Department|publisher=Drs. Foster & Smith, Inc.}}</ref>
 
