/* ᏂᎦᏛᎢ ᎠᎴ ᎦᎶᏍᎬ */

--- a/ᏪᏌ.mw
+++ b/ᏪᏌ.mw
@@ -93,7 +93,7 @@
 
 ᎪᎯ ᎤᏚᎳᏗ ᎾᏍᎩᎾᎢ ᎦᎸᎳᏗ ᎤᏜᏅᏛ, ᏱᏂᎬᏛᎾ, ᏰᎵᏇ ᎦᏂᏰᎬ ᎠᎦᏛᏗ ᎯᎠ ᎤᏂᎸᏉᏗ ᎧᏁᎬᎢ Ꮎ ᏪᏌ "ᏂᎪᎯᎸᎢ ᏗᎦᏙᎯ ᎾᎿ Ꮝ ᏧᎾᎳᏏᏕᎾ."  ᎯᎠ ᏴᏩᏁᎬ ᎤᎾᏙᏢᎯ ᎾᏍᎩᎾᎢ ᎯᎠ ᎦᎵᏓᏍᏛ ᎤᎾᏰᎯᏍᏗ ᎡᎿᎢ ᎡᎥ ᎠᏕᎸ ᏗᏎᎯᏍᏗ ᎤᎾᏤᎵᎢ ᏄᎾᏰᎯᏍᏛᎾ ᎯᎠ ᎤᏟ ᎢᎦᎢ ᎦᏂᏰᎬ perches ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᏚᏁᏅᏒ, ᏗᏓᏅᏗᏍᏙᏗ "ᎦᎸᎳᏗ-ᎤᎵᏌᎳᏙᏗ syndrome," ᎭᏢᏃ ᎬᎨᏫᏍᏗ ᏪᏌ ᎦᎶᏍᎦ ᏂᏛᎴᏅᏓ ᎦᎶᏒᏍᏔᏅ ᏂᎦᏛᎢ.<ref>{{cite web|url=http://www.peteducation.com/article.cfm?cls=0&cat=2032&articleid=3409|title="High-Rise Syndrome: Cats Injured Due to Falls"|author=Veterinary & Aquatic Services Department|publisher=Drs. Foster & Smith, Inc.}}</ref>
 
-ᎾᎯᏳᎨᏒ ᎤᎶᏒᎩ, ᏪᏌ ᏰᎵᏇ ᎠᏏᏅᏍᏗ ᎠᏍᏕᏯᏍᏗ Ꮝ ᎠᏰᎸ ᎠᎴ ᏚᏳᎪᏛ ᎤᏩᏌᏊ ᎬᏗᏍᎬᎢ Ꮝ ᏄᎵᏂᎬᎬ [[equilibrioception|ᎤᏓᏅᏖᏗ  ᎤᏘᏴᎯ]] ᎠᎴ ᎦᏓᏆᎵ. <ref>{{cite web | title=Falling Cats | url=http://www.verrueckte-experimente.de/leseproben_e.html | accessdate=October 24|accessyear=2005 }}</ref> ᎪᎯ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ ᏪᏌ ᎤᏤᎵ "[[cat righting reflex|ᏚᏳᎪᏛ ᏗᏟᎶᏍᏔᏅ]]." ᎾᏍᎩ ᏂᎪᎯᎸᎢ ᏂᏚᏳᎪᏛ ᎤᏩᏌᏊ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏠᏱ ᎦᎶᎯᏍᏗ, ᎠᏓᏁᎳᏅ ᎾᏍᎩ ᎤᎭ ᎯᎠ iyuwakodi ᎿᏛᎦ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎾᎯᏳᎨᏒ ᎤᎶᏒᎩ. ᎯᎠ ᎢᏴ, ᎦᎸᎳᏗ (multi-ᎧᏃᎮᎸᏍᎩ) ᎦᎶᏍᎦ ᏰᎵᏇ ᎾᏍᏋ ᎦᏲᎵᎨ ᎦᏂᏰᎬ ᎠᏂ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᎾᏍᎩ ᎤᏩᏒ ᎦᏲᎵ ᎠᏎᎯᎯ. ᎤᎪᏗᏗ ᏕᎦᎸᏛ ᎧᏁᏌᎢ ᎠᎴ ᎤᎾᏅᏛ ᏪᏌ ᎦᎶᏍᎬ ᏂᏛᎴᏅᏓ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᏂᎦᏛᎢ (5 10 ᎢᏗᎦᎸᎳᏗ) ᎠᎴ ᏩᎵᏃᎯᏯᏍᎬ ᎾᎥᏂᎨᏍᏗ ᎠᏰᎸ ᏄᏛᎿᏕᎬ. ᎠᎵᏍᎦᏁᏍᎩ ᎤᏂᎸᏉᏗ ᎤᏬᎯᏳᏒ ᏪᏌ ᏄᏠᏯᏍᏛᎾ [[tail (anatomy)|ᎦᏂᏓᏛ]] ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎪᎯ ᏅᏏᎾᏒ, ᎣᏂ ᏧᏩᎫᏛ ᏪᏌ ᎾᏍᎩ ᎤᎪᏗᏗ ᎠᏓᏅᏍᏗ Ꮝ hindlegs ᎠᎴ relies ᎾᎿ ᎠᏂᏙᎾᎥ [[angular momentum|ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ]] ᎠᏫᏒᏗ ᎦᎸᎳᏗᏢ ᎾᏍᎩᎾᎢ ᎦᏙᎯ ᎦᎷᎬ, ᎠᎴ ᎯᎠ ᎦᏂᏓᏛ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ ᎤᏍᏗ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎪᎯ ᎠᏓᎪᎾᏛᏙᏗ.<ref>[http://helix.gatech.edu/Classes/ME3760/1998Q3/Projects/Nguyen/ HOW DOES A CAT ALWAYS LAND ON ITS FEET ?]</ref>
+ᎾᎯᏳᎨᏒ ᎤᎶᏒᎩ, ᏪᏌ ᏰᎵᏇ ᎠᏏᏅᏍᏗ ᎠᏍᏕᏯᏍᏗ Ꮝ ᎠᏰᎸ ᎠᎴ ᏚᏳᎪᏛ ᎤᏩᏌᏊ ᎬᏗᏍᎬᎢ Ꮝ ᏄᎵᏂᎬᎬ [[equilibrioception|ᎤᏓᏅᏖᏗ  ᎤᏘᏴᎯ]] ᎠᎴ ᎦᏓᏆᎵ. <ref>{{cite web | title=Falling Cats | url=http://www.verrueckte-experimente.de/leseproben_e.html | accessdate=October 24|accessyear=2005 }}</ref> ᎪᎯ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ ᏪᏌ ᎤᏤᎵ "[[cat righting reflex|ᏚᏳᎪᏛ ᏗᏟᎶᏍᏔᏅ]]." ᎾᏍᎩ ᏂᎪᎯᎸᎢ ᏂᏚᏳᎪᏛ ᎤᏩᏌᏊ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏠᏱ ᎦᎶᎯᏍᏗ, ᎠᏓᏁᎳᏅ ᎾᏍᎩ ᎤᎭ ᎯᎠ ᎢᏳᏩᎪᏗ ᎿᏛᎦ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎾᎯᏳᎨᏒ ᎤᎶᏒᎩ. ᎯᎠ ᎢᏴ, ᎦᎸᎳᏗ (multi-ᎧᏃᎮᎸᏍᎩ) ᎦᎶᏍᎦ ᏰᎵᏇ ᎾᏍᏋ ᎦᏲᎵᎨ ᎦᏂᏰᎬ ᎠᏂ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᎾᏍᎩ ᎤᏩᏒ ᎦᏲᎵ ᎠᏎᎯᎯ. ᎤᎪᏗᏗ ᏕᎦᎸᏛ ᎧᏁᏌᎢ ᎠᎴ ᎤᎾᏅᏛ ᏪᏌ ᎦᎶᏍᎬ ᏂᏛᎴᏅᏓ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᏂᎦᏛᎢ (5 10 ᎢᏗᎦᎸᎳᏗ) ᎠᎴ ᏩᎵᏃᎯᏯᏍᎬ ᎾᎥᏂᎨᏍᏗ ᎠᏰᎸ ᏄᏛᎿᏕᎬ. ᎠᎵᏍᎦᏁᏍᎩ ᎤᏂᎸᏉᏗ ᎤᏬᎯᏳᏒ ᏪᏌ ᏄᏠᏯᏍᏛᎾ [[tail (anatomy)|ᎦᏂᏓᏛ]] ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎪᎯ ᏅᏏᎾᏒ, ᎣᏂ ᏧᏩᎫᏛ ᏪᏌ ᎾᏍᎩ ᎤᎪᏗᏗ ᎠᏓᏅᏍᏗ Ꮝ hindlegs ᎠᎴ relies ᎾᎿ ᎠᏂᏙᎾᎥ [[angular momentum|ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ]] ᎠᏫᏒᏗ ᎦᎸᎳᏗᏢ ᎾᏍᎩᎾᎢ ᎦᏙᎯ ᎦᎷᎬ, ᎠᎴ ᎯᎠ ᎦᏂᏓᏛ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ ᎤᏍᏗ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎪᎯ ᎠᏓᎪᎾᏛᏙᏗ.<ref>[http://helix.gatech.edu/Classes/ME3760/1998Q3/Projects/Nguyen/ HOW DOES A CAT ALWAYS LAND ON ITS FEET ?]</ref>
 
 === ᎣᏓᏅᏛ ===
 [[File:Ojo de gata trim.jpg|thumb|left|220px| ᎠᏍᏚᏗ-ᎦᎸᎳᏗᏢ   ᏪᏌ ᎤᏤᎵ ᎠᎦᏙᎵ]]
