robot Modifying: [[ru:Колибри]]

--- a/ᏩᎴᎳ.mw
+++ b/ᏩᎴᎳ.mw
@@ -155,7 +155,7 @@ Many, see text.
 [[pt:Beija-flor]]
 [[qu:Q'inti]]
 [[ro:Colibri]]
-[[ru:Колибри (семейство)]]
+[[ru:Колибри]]
 [[simple:Hummingbird]]
 [[sk:Kolibríkovité]]
 [[sl:Kolibriji]]
