The file [[:Image:Maize_ear.jpg]] has been replaced by [[:Image:Maispflanze.jpg]] by administrator [[:commons:User:Bdk]]: ''exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/ᏎᎷ.mw
+++ b/ᏎᎷ.mw
@@ -21,7 +21,7 @@
 
 == ᏎᎷ ᎤᎾᏙᏢᎯ ==
 
-ᎯᎠ ᎤᏩᏂᎦᎸ ᎤᏍᏔᎳᎾᎵ ᎾᎥᏂᎨ ᎡᎵᏍᏗ [[bamboo]] ᏩᏚᎵᏏ ᎪᏢᏗ ᎧᎵᏎᏥ ᎠᎴ ᎯᎠ ᎤᏫᏢ ([[Node (botany)|ᏂᎯ]]) ᎠᎴ ᎬᏩᏚᏫᏛ 20–30 [[centimeter|cm]] (8–12 [[inch|ᎭᏫᎾᏗᏢ]]) ᏧᎦᎴᏅᏓ.  ᏎᎷ ᎤᎭ ᎤᏙᎯᏳ ᎤᏤᎵᏛ ᎤᏛᏏᏗᏒ ᎤᏙᏢᏒ, ᎯᎠ ᎡᎳᏗᎨ ᏧᎦᎶᎦ ᎠᎴᏂᏙᎲ ᎾᏍᎩᏯᎢ ᎠᏯᏖᎾ ᎦᎶᏂᏗ, 50–100 cm ᎦᏅᎯᏓ ᎠᎴ 5–10 cm ᎠᏯᏖᎾ (2–4 ft ᎾᎥᎢ 2–4 ᎭᏫᎾᏗᏢ); ᎯᎠ ᎤᏩᏂᎦᎸ ᎠᎴ ᎠᏁᏍᎦᏗ, ᏄᏍᏛ ᎢᏯᏛᏁᏗ 2–3 m (7–10 ft) ᎭᏫᎾᏗᏢ ᏂᎦᏛᎢ, ᎬᏙᏗ ᎤᎪᏗᏗ ᏂᎯ, ᎥᏓᏓᎫᏴᎡᏗᏱ ᎤᏣᏘᎾ ᎦᏓᏘ-ᏧᎦᎶᎦ ᎾᎾᎢ ᏂᎦᎥᎢ ᏂᎯ. ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ ᏧᎦᎶᎦ ᎠᎴ ᎠᏍᏚᏗ ᎯᎠ ᎤᏩᏂᎦᎸ ᎠᏛᏍᎬ ᎯᎠ ᏗᎦᎴᏂ. [[File:Maize ear.jpg|right|thumbnail|ᏎᎷ digakohidi ᎠᎾᏓᏎᎮᎲᎢ ᏗᎦᎴᏂ]] 
+ᎯᎠ ᎤᏩᏂᎦᎸ ᎤᏍᏔᎳᎾᎵ ᎾᎥᏂᎨ ᎡᎵᏍᏗ [[bamboo]] ᏩᏚᎵᏏ ᎪᏢᏗ ᎧᎵᏎᏥ ᎠᎴ ᎯᎠ ᎤᏫᏢ ([[Node (botany)|ᏂᎯ]]) ᎠᎴ ᎬᏩᏚᏫᏛ 20–30 [[centimeter|cm]] (8–12 [[inch|ᎭᏫᎾᏗᏢ]]) ᏧᎦᎴᏅᏓ.  ᏎᎷ ᎤᎭ ᎤᏙᎯᏳ ᎤᏤᎵᏛ ᎤᏛᏏᏗᏒ ᎤᏙᏢᏒ, ᎯᎠ ᎡᎳᏗᎨ ᏧᎦᎶᎦ ᎠᎴᏂᏙᎲ ᎾᏍᎩᏯᎢ ᎠᏯᏖᎾ ᎦᎶᏂᏗ, 50–100 cm ᎦᏅᎯᏓ ᎠᎴ 5–10 cm ᎠᏯᏖᎾ (2–4 ft ᎾᎥᎢ 2–4 ᎭᏫᎾᏗᏢ); ᎯᎠ ᎤᏩᏂᎦᎸ ᎠᎴ ᎠᏁᏍᎦᏗ, ᏄᏍᏛ ᎢᏯᏛᏁᏗ 2–3 m (7–10 ft) ᎭᏫᎾᏗᏢ ᏂᎦᏛᎢ, ᎬᏙᏗ ᎤᎪᏗᏗ ᏂᎯ, ᎥᏓᏓᎫᏴᎡᏗᏱ ᎤᏣᏘᎾ ᎦᏓᏘ-ᏧᎦᎶᎦ ᎾᎾᎢ ᏂᎦᎥᎢ ᏂᎯ. ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ ᏧᎦᎶᎦ ᎠᎴ ᎠᏍᏚᏗ ᎯᎠ ᎤᏩᏂᎦᎸ ᎠᏛᏍᎬ ᎯᎠ ᏗᎦᎴᏂ. [[File:Maispflanze.jpg|right|thumbnail|ᏎᎷ digakohidi ᎠᎾᏓᏎᎮᎲᎢ ᏗᎦᎴᏂ]] 
 
 ᎯᎠ ᏗᎦᎴᏂ ᎠᎴ ᎠᎨᏴ ᎠᏛᎯᏍᏙᏗ, ᎠᏍᏓᏯ ᎫᏝᎢ ᎦᏬᎯᎸᏙᏗ ᎾᎥᎢ ᎯᎸᏍᎩ ᏫᏚᏳᎪᏛ ᏧᎦᎶᎦ, ᎠᎴ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᏍᏚᏅᎩ-ᎭᏫᎾᏗᏢ ᎾᎥᎢ ᎠᏂ ᎯᎠ ᎤᏩᏂᎦᎸ Ꮎ ᎤᏅᏌ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎾᏛᏁᎸᏗ ᎤᏅᏌ ᎠᎯᏗᎨᎢ iyuwakodi ᎯᎠ ᏄᏍᏗᏓᏅ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᏓᎶᏂᎨ ᏏᎵᎩ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᎦᎶᎬ whorl ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎯᎠ ᎦᎴᏂ.  ᎯᎠ ᏏᎵᎩ ᎠᎴ elongated ᎤᏚᎯᏍᏛ Ꮎ ᎭᎦᏔ ᎾᏍᎩᏯᎢ ᎤᏓᏂᏝᏅ ᎤᏍᏗᏰᎬ, ᎾᎾᎢ ᎢᎬᏱ ᎢᏤ ᎢᏳᏍᏗ, ᎠᎴ ᎣᏂᏯᎨᏍᏙᏗ ᎩᎦᎨ ᎠᎴ ᏓᎶᏂᎨ. ᏎᎷ ᎦᎧᏅ ᎠᏂᏏᏴᏫᎭ ᏫᎵ ᎤᏙᎷᏬᏗ 2–4 ᏗᎦᎴᏂ. ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏓᎦᎶᎩᏍᎬ techniques ᎭᏫᎾᏗᏢ ᎤᏙᎷᏩᏛᏓ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎤᏠᏱᎭ rely ᎾᎿ ᎠᏫᏒᏗ ᎠᏂᎧᏅᏍᎬ, ᎦᏙ ᎤᏍᏗ ᎠᎦᏲᎳᏅ ᎯᎠ ᏎᏍᏗ ᏗᎦᎴᏂ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎥᎢᏒᎢ ᎬᏩᏚᏫᏛ 0.9 (Ꮎ ᎨᏒᎢ, ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᏌᏊ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎦᎪᏘ ᎬᏙᏗ ᎢᎦᏛ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ stressed ᎤᏅᏌ ᎠᏛᎯᏍᏙᏗ ᏭᎶᏒᏍᏛ ᎤᏴᏜ ᎤᏩᎾᏒ ᎤᏛᏒ ᏗᎦᎴᏂ).[http://maize.agron.iastate.edu/ears.html] ᎠᏂᎧᏅᏍᎬ ᎾᏍᎩᎾᎢ [[silage]] ᏫᎵ ᎾᏍᏋ ᎢᏧᎳᎭ denser ᎠᎵᏂᎬᏁᏗ ᎢᏧᎳᎭ ᎡᎳᏗᎨ ᏎᏍᏗ ᏗᎦᎴᏂ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎦᎪᏘ ᎢᏳᏍᏗ ᏯᏛᎿ. ᎤᏙᎯᏳ varieties ᏎᎷ ᎤᎭ ᏭᏪᏙᎢ ᏗᏓᏓᏂᎸᏣᏘ ᎠᏛᎯᏍᏙᏗ ᏗᎦᏟᏌᏅᎯ ᎤᏙᎷᏩᏛᏓ ᏗᎦᎴᏂ, ᎠᎴ ᎾᏍᎩ ᎯᎠ ᎠᎴ ᎯᎠ ᏗᏓᎴᎲᏍᎬ ᎯᎠ "ᎤᏍᏗ ᏎᎷ" Ꮎ ᎨᏒᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎢᏴ ᎠᏂᏙᎾᎥ ᎭᏫᎾᏗᏢ [[Asian cuisine|Asian ᎠᎵᏍᏓᏴᏗ]].
 
