robot Adding: [[ang:Seax]]

--- a/ᎭᏰᎳᏍᏗ.mw
+++ b/ᎭᏰᎳᏍᏗ.mw
@@ -211,6 +211,7 @@ Honing ᎠᏂᏅᏯ (ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ [[Sharpening stone#Oil sto
 {{Link FA|ru}}
 
 [[an:Cuitiello]]
+[[ang:Seax]]
 [[ar:سكين]]
 [[ast:Cuchiellu]]
 [[ay:Khariña]]
