The file [[:Image:Maize.jpg]] has been replaced by [[:Image:Zea_mays.jpg]] by administrator [[:commons:User:Túrelio]]: ''exact or scaled-down duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/ᏦᎢ_ᎠᎾᏓᎸᎢ.mw
+++ b/ᏦᎢ_ᎠᎾᏓᎸᎢ.mw
@@ -1,6 +1,6 @@
 ''ᏦᎢ ᎠᎾᏓᎸᎢ'': ᏎᎷ, ᏚᏯ, ᎧᏯᏎᏆ
 
-[[Image:Maize.jpg|thumb|ᏎᎷ]][[Image:Phaseolus vulgaris seed.jpg|thumb|ᏚᏯ]][[Image:USDA summer squash.jpg|thumb|ᎧᏯᏎᏆ]]
+[[Image:Zea_mays.jpg|thumb|ᏎᎷ]][[Image:Phaseolus vulgaris seed.jpg|thumb|ᏚᏯ]][[Image:USDA summer squash.jpg|thumb|ᎧᏯᏎᏆ]]
 
 {{stub}}
 
