/* ᎦᏬᏂᎯᏍᏗ ᎠᎴ ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ */

--- a/ᏣᎳᎩ.mw
+++ b/ᏣᎳᎩ.mw
@@ -31,12 +31,12 @@
 
 ᎯᎠ ᎧᏁᏨ "ᏣᎳᎩ" ᎨᏒᎢ derived ᎧᏁᏨ ᎦᏙ ᎤᏍᏗ ᎤᎷᏨᎩ ᎠᎴᏅᏔᏅ ᏂᏛᎴᏅᏓ ᎯᎠ [[Choctaw]] ᏗᏓᏁᏟᏴᎡᏗ ᎦᏬᏂᎯᏍᏗ. ᎾᏍᎩ ᏥᏄᏍᏛᎩ derived ᏂᏛᎴᏅᏓ ᎯᎠ Choctaw ᎧᏁᏨ "Cha-ᏂᏚᏍᏛᎢ-kee" ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ "ᎾᏍᎩ ᎦᎪ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏙᏓᎸ" ᎠᎴ "ᎾᏍᎩ ᎦᎪ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏔᎦᎳᏱ." ᎯᎠ ᏚᏙᎥ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᏣᎳᎩ ᎠᎴᏅᏔᏅ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎤᏅᏌ ᎨᏒᎢ ''Ah-Ꮒ-yv-wi-Ꮿ'' (ᏗᏙᎳᎩ ᎠᏁᏢᏔᏅᎯ "ᎾᏍᎩ ᎯᎠ ᎠᎴ ᏂᎦᏛ ᎯᎠ ᏴᏫ ᏴᏫ"). ᎤᎪᏗᏗ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏂᎳᏍᏓᎸ ᎤᎭ ᏚᏙᎥ ᎾᏍᎩᎾᎢ ᎤᏅᏌ ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎾᎥᏂᎨᏍᏙᏗᏇ ᎪᎯ. ᏱᏂᎬᏛᎾ, ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏣᎳᎩ ᎤᏯᏅᏛ ᎤᏅᏌ ᏣᎳᎩ, ᎠᎴ ᏣᎳᎩ.
 
-==ᎦᏬᏂᎯᏍᏗ ᎠᎴ ᎠᏃᏪᎵᏍᎬ iyahdvnelidasdi==
+==ᎦᏬᏂᎯᏍᏗ ᎠᎴ ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ==
 
 [[Image:Sequoyah.jpg|thumb|right|200px|ᏍᏏᏆᏱ]]
-ᎯᎠ ᏣᎳᎩ ᎧᏁᎬ [[Iroquoian languages|Iroquoian]] ᎦᏬᏂᎯᏍᏗ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ [[Polysynthetic language|polysynthetic]] ᎠᎴ ᎨᏒᎢ ᎪᏪᎳᏅᎯ ᎭᏫᎾᏗᏢ [[syllabary]] ᎦᎾᎬᎢ ᎾᎥᎢ [[ᏍᏏᏆᏱ]]. ᎾᏍᎩ ᎨᏒᎢ ᎾᏊ ᎤᏬᎯᏳᏅ Ꮎ ᎤᏟ ᎢᎦᎢ ᎯᎸᎯᏳᎢ Syllabary Ꮎ predated ᏍᏏᏆᏱ ᎠᎴ ᎠᎾᏍᎬᏘ ᎤᎭ ᎤᏓᎵᎦᎵᏍᏔᏅ ᎤᏤᎵ ᎡᏆ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᏣᎳᎩ ᏴᏫ ᏥᏄᏍᏛᎩ ᏭᏓᏁᎸᎩ ᎡᎳᏗ ᏗᎬᏩᎶᏒ ᎯᎠ [[Ani Kutani|ᎠᏂ Kutani]], ᎯᎸᎯᏳᎢ ᏗᎦᎳᏫᏍᏗ ᎯᎠ ᏣᎳᎩ ᏴᏫ.
+ᎯᎠ ᏣᎳᎩ ᎧᏁᎬ [[Iroquoian languages|Iroquoian]] ᎦᏬᏂᎯᏍᏗ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ [[Polysynthetic language|polysynthetic]] ᎠᎴ ᎨᏒᎢ ᎪᏪᎳᏅᎯ ᎭᏫᎾᏗᏢ [[syllabary]] ᎦᎾᎬᎢ ᎾᎥᎢ [[ᏍᏏᏆᏱ]]. ᎾᏍᎩ ᎨᏒᎢ ᎾᏊ ᎤᏬᎯᏳᏅ Ꮎ ᎤᏟ ᎢᎦᎢ ᎯᎸᎯᏳᎢ Syllabary Ꮎ predated ᏍᏏᏆᏱ ᎠᎴ ᎠᎾᏍᎬᏘ ᎤᎭ ᎤᏓᎵᎦᎵᏍᏔᏅ ᎤᏤᎵ ᎡᏆ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᏣᎳᎩ ᏴᏫ ᏥᏄᏍᏛᎩ ᏭᏓᏁᎸᎩ ᎡᎳᏗ ᏗᎬᏩᎶᏒ ᎯᎠ [[Ani Kutani|ᎠᏂ ᎫᏔᏂ]], ᎯᎸᎯᏳᎢ ᏗᎦᎳᏫᏍᏗ ᎯᎠ ᏣᎳᎩ ᏴᏫ.
 
-ᎾᏍᎩᎾᎢ ᏧᏕᏘᏴᏓ, ᎤᎪᏗᏗ ᏴᏫ ᎤᏬᏪᎳᏅ transliterated ᏣᎳᎩ ᎾᎿ ᎯᎠ ᎧᎾᏁᏍ ᎠᎴ ᎬᏔᏅᎯ ᎥᏳᎩ intercompatible ᏂᎬᏂᏏᏍᎬ ᏗᎦᎪᏗ ᎠᏥᏄqowisgv ᎯᎠ syllabary. ᏱᏂᎬᏛᎾ, ᎣᏂ ᏧᏩᎫᏛ ᎯᎠ ᏰᎵ ᎣᏏ ᎾᏞᎬ ᎦᏟᏐᏗᎩ ᎯᎠ ᏣᎳᎩ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ [[Unicode/Cherokee|Unicode]], ᎯᎠ ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ ᎨᏒᎢ experiencing ᏅᎪᏢᎯᏐᏗᏱ ᎭᏫᎾᏗᏢ Ꮝ ᎬᏙᏗ ᎾᎿ ᎯᎠ ᎧᎾᏁᏍ. ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎪᏪᎶᏗ, ᏱᏂᎬᏛᎾ, Ꮎ ᏥᏄᏍᏗ ᏕᎭᎷᏱ 2006 ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎣᎦᎳᎰᎻ ᏙᎢ ᎠᏰᎵ ᎤᏒᎧᎵ ᎬᏔᏂᏓᏍᏗ ᎬᏙᏗ-unicode ᏂᎬᏂᏏᏍᎬ ᎾᏍᎩᎾᎢ online ᎪᏪᎵᎬᏂᎨᏒ ᎢᏗᎬᏁᎯ, ᎠᏠᏯᏍᏗᏍᎩ online ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ ᎯᎠ [[ᏣᎳᎩ ᏧᎴᎯᏌᏅᎯ]]. 
+ᎾᏍᎩᎾᎢ ᏧᏕᏘᏴᏓ, ᎤᎪᏗᏗ ᏴᏫ ᎤᏬᏪᎳᏅ transliterated ᏣᎳᎩ ᎾᎿ ᎯᎠ ᎧᎾᏁᏍ ᎠᎴ ᎬᏔᏅᎯ ᎥᏳᎩ intercompatible ᏂᎬᏂᏏᏍᎬ ᏗᎦᎪᏗ ᎠᏥᏄ ᎪᏫᏍᎬ ᎯᎠ syllabary. ᏱᏂᎬᏛᎾ, ᎣᏂ ᏧᏩᎫᏛ ᎯᎠ ᏰᎵ ᎣᏏ ᎾᏞᎬ ᎦᏟᏐᏗᎩ ᎯᎠ ᏣᎳᎩ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ [[Unicode/Cherokee|Unicode]], ᎯᎠ ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ ᎨᏒᎢ experiencing ᏅᎪᏢᎯᏐᏗᏱ ᎭᏫᎾᏗᏢ Ꮝ ᎬᏙᏗ ᎾᎿ ᎯᎠ ᎧᎾᏁᏍ. ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎪᏪᎶᏗ, ᏱᏂᎬᏛᎾ, Ꮎ ᏥᏄᏍᏗ ᏕᎭᎷᏱ 2006 ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎣᎦᎳᎰᎻ ᏙᎢ ᎠᏰᎵ ᎤᏒᎧᎵ ᎬᏔᏂᏓᏍᏗ ᎬᏙᏗ-unicode ᏂᎬᏂᏏᏍᎬ ᎾᏍᎩᎾᎢ online ᎪᏪᎵᎬᏂᎨᏒ ᎢᏗᎬᏁᎯ, ᎠᏠᏯᏍᏗᏍᎩ online ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ ᎯᎠ [[ᏣᎳᎩ ᏧᎴᎯᏌᏅᎯ]]. 
 
 [[Image:Cherokee_Syllabary.png|550px]]
 
