/* ᎤᎬᏫᏳᎯ Joe Byrd ᎤᏤᎵ 1997 ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ Controversies */

--- a/ᏣᎳᎩ.mw
+++ b/ᏣᎳᎩ.mw
@@ -155,7 +155,7 @@ W. W. Keeler ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ [[1949
 [[Image:JoeByrdBIA-USGImage1.gif|thumb|right|300px|ᎾᎯᏳᎨᏒ ᎯᎠ 1998 ᏣᎳᎩ ᎬᎾᏕᎾ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏂᎨᏒᎾ ᎢᎦ, Joe Byrd ᎤᏤᎵ ᎤᏤᎵᏓ ᎫᏓᎸᏙ ᎠᏂᏌᏙᏯᏍᎩ ᎠᎴ BIA ᏗᏓᏂᏱᏍᎩ ᎤᎵᏍᏕᎸᏗ ᎬᏙᏗ ᏗᎦᎶᏇ ᎠᎴ ᎠᎾᏗᏒᎯᎯ ᎤᎦᏔᏅ ᎡᎳᏗ ᏂᏛᎴᏅᏓ rooftops onto ᎯᎠ ᎤᎾᏓᏟᏌᎲ  ᏣᎳᎩ lyudetiyvda, ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ, ᎠᎴ ᏗᏂᏲᎵ ᎾᎯᏳᎢ  BIA helicopter circled ᎦᎸᎳᏗᏢ.  ᏗᏟᎶᏍᏔᏅ ᎠᎩᏒᎯ ᎾᎥᎢ ᏂᎬᎾᏛ ᎠᏰᎵ ᏗᎧᎿᏩᏛᏍᏗ ᏗᏂᎴᏱᏗᏍᎩ.]]
 ᎤᎬᏫᏳᎯ Joe Byrd, ᏧᏓᎩᏴᎲ 1995 ᏥᏄᏍᏗ ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ, ᏥᏄᏍᏛᎩ ᎾᎥᏂᎨᏍᏗ ᎤᎾᏚᏓᎸ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏲᏨᎯ ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᏍᏆᎸᎲ ᎠᏯᏙᎯᎲ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎤᏤᎵ ᏚᏳᎪᏛ ᎦᏙ ᎤᏍᏗ ᎾᎥᏂᎨᏍᏗ ᏓᎬᏩᎶᏛ ᎯᎠ ᎠᏂᎳᏍᏓᎸ Ꮝ ᎤᏩᎫᏗᏗᏒ ᎠᎴ ᏓᎳᏏᏛ.  ᎤᏤᎵ ᏄᏂᎬᏫᏳᏌᏕᎩ ᏥᏄᏍᏛᎩ ᏗᎨᏥᎾᏝᎢ ᎤᎶᏒᏍᏗ ᎤᏂᎦᏛᎲᏍᎩ ᎾᎥᎢ ᎯᎠ ᎢᏧᎳ ᎠᏴ ᏗᏗᏲᎯᎯ ᏂᎦᎥ ᎠᎴ ᎢᏧᎳ ᎠᏴ ᏗᎪᏪᎵᏍᎩ ᎯᎠ ᎭᏫᎾᏗᏢ ᏧᏠᎯᏍᏗ ᎧᏃᎮᎸᎯ ᏧᎾᏍᏗ, ᎦᎶᏄᎮᏛ, ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ wiretapping, ᎪᏪᎵ ᏫᎦᏅᏅ ᎦᎶᏄᎮᏛ, ᎠᎴ ᎤᎾᏙᏢᏅᎯ ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ ᏗᎦᏘᎴᎩ ᎯᎠ ᏣᎳᎩ ᏴᏫ. 
 
-'''Joe Byrd''' ᏥᏄᏍᏛᎩ ᎯᎠ [[ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ  ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ]] ᏂᏛᎴᏅᏓ 1995 1999 ᎠᎴ ᏥᏄᏍᏛᎩ ᎤᏄᎸᎲᏍᎩ ᎾᎥᎢ [[ᎤᎬᏫᏳᎯ Chad ᎠᏥᏅᏏᏓᏍᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ 1999 ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏗᏙᎩᏯᏛ.  ᎾᎯᏳᎨᏒ ᎤᏤᎵ ᏄᏂᎬᏫᏳᏌᏕᎩ, ᎯᎠ [[ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ]] ugatohvsvi nationwide ᎠᏙᏱᏯᏛ ᎠᎬᏩᎵ ᎤᏐᏅ ᎠᏓᏚᎯᏍᏙᏗ ᎤᏍᏆᎸᎲ ᎧᏃᎮᎸᎯ ᎠᏓᎩᎡᏗ, ᎠᏤᏫᏍᎬ ᎠᏰᎵ ᏕᎠᎲ, ᎤᏲᎢᎬᏁᏗ ᏌᏊᎭ ᎤᎳᏂᎬᎬ, ᎠᎴ ᎤᎾᏙᏢᏅᎯ ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ ᏗᎦᏘᎴᎩ ᎯᎠ ᏣᎳᎩ ᏴᏫ.  Joe Byrd ᎤᏤᎵ ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ ᎫᏓᎸᏙ ᎦᏌᏙᏯᏍᏗ ᎤᎵᏍᏕᎸᏗ ᎬᏙᏗ ᎠᎾᏗᏒᎯᎯ, ᎤᏒᏕᎾ, ᎠᎴ ᎤᏩᏒ ᎠᎾᎩᏍᎩ ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ ᏓᏥᏂᏴᎡᎸᎩ ᎠᎴ orchestrated ᎤᎵᏍᏕᎸᏗ ᎢᏗᎦᏘᎭ ᏗᎦᏘᎴᎩ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏄᎬᏫᏳᏌᏕᎩ ᎤᏩᏂᎦᎸ. Byrd ᎤᏤᎵ ᎠᏂᏌᏙᏯᏍᎩ boarded ᎦᎸᎳᏗᏢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎦᏁᎸ ᎠᎴ ᏄᎬᏫᏳᏌᏕᎩ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎤᎶᏐᏅ ᎾᏍᎩ ᎯᎠ ᏓᎾᏕᏲᎲᏍᎬ ᎠᏁᎳᏛᏅ ᏓᎬᏩᎶᏗ ᎠᎴ ᎠᏓᏁᏤᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᎾᏍᎩᎾᎢ ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ ᏧᎾᏍᏗ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏰᎵ ᏕᎠᎲ. Byrd ᎠᏁᎳᏛᏅ ᏗᏍᏆᎸᏙᏗ ᎾᏍᎩᎾᎢ re-ᏗᏙᎩᏯᏛ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎭᏫᎾᏗᏢ 2003 ᎠᎴ ᏥᏄᏍᏛᎩ ᎠᏏᏇ ᎤᏄᎸᎲᏍᎩ ᎾᎥᎢ ᎯᎠ ᎦᏁᎳ ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ Chad ᎠᏥᏅᏏᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎾᎥᏂᎨ ᎤᎶᏒᎩ ᎠᏓᏎᎪᎩᏍᏗ.
+'''Joe Byrd''' ᏥᏄᏍᏛᎩ ᎯᎠ [[ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ  ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ]] ᏂᏛᎴᏅᏓ 1995 1999 ᎠᎴ ᏥᏄᏍᏛᎩ ᎤᏄᎸᎲᏍᎩ ᎾᎥᎢ [[ᎤᎬᏫᏳᎯ Chad ᎠᏥᏅᏏᏓᏍᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ 1999 ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏗᏙᎩᏯᏛ.  ᎾᎯᏳᎨᏒ ᎤᏤᎵ ᏄᏂᎬᏫᏳᏌᏕᎩ, ᎯᎠ [[ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ]] ᎤᎦᏙᎲᏒᎢ nationwide ᎠᏙᏱᏯᏛ ᎠᎬᏩᎵ ᎤᏐᏅ ᎠᏓᏚᎯᏍᏙᏗ ᎤᏍᏆᎸᎲ ᎧᏃᎮᎸᎯ ᎠᏓᎩᎡᏗ, ᎠᏤᏫᏍᎬ ᎠᏰᎵ ᏕᎠᎲ, ᎤᏲᎢᎬᏁᏗ ᏌᏊᎭ ᎤᎳᏂᎬᎬ, ᎠᎴ ᎤᎾᏙᏢᏅᎯ ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ ᏗᎦᏘᎴᎩ ᎯᎠ ᏣᎳᎩ ᏴᏫ.  Joe Byrd ᎤᏤᎵ ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ ᎫᏓᎸᏙ ᎦᏌᏙᏯᏍᏗ ᎤᎵᏍᏕᎸᏗ ᎬᏙᏗ ᎠᎾᏗᏒᎯᎯ, ᎤᏒᏕᎾ, ᎠᎴ ᎤᏩᏒ ᎠᎾᎩᏍᎩ ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ ᏓᏥᏂᏴᎡᎸᎩ ᎠᎴ orchestrated ᎤᎵᏍᏕᎸᏗ ᎢᏗᎦᏘᎭ ᏗᎦᏘᎴᎩ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏄᎬᏫᏳᏌᏕᎩ ᎤᏩᏂᎦᎸ. Byrd ᎤᏤᎵ ᎠᏂᏌᏙᏯᏍᎩ boarded ᎦᎸᎳᏗᏢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎦᏁᎸ ᎠᎴ ᏄᎬᏫᏳᏌᏕᎩ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎤᎶᏐᏅ ᎾᏍᎩ ᎯᎠ ᏓᎾᏕᏲᎲᏍᎬ ᎠᏁᎳᏛᏅ ᏓᎬᏩᎶᏗ ᎠᎴ ᎠᏓᏁᏤᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᎾᏍᎩᎾᎢ ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ ᏧᎾᏍᏗ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏰᎵ ᏕᎠᎲ. Byrd ᎠᏁᎳᏛᏅ ᏗᏍᏆᎸᏙᏗ ᎾᏍᎩᎾᎢ re-ᏗᏙᎩᏯᏛ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎭᏫᎾᏗᏢ 2003 ᎠᎴ ᏥᏄᏍᏛᎩ ᎠᏏᏇ ᎤᏄᎸᎲᏍᎩ ᎾᎥᎢ ᎯᎠ ᎦᏁᎳ ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ Chad ᎠᏥᏅᏏᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎾᎥᏂᎨ ᎤᎶᏒᎩ ᎠᏓᏎᎪᎩᏍᏗ.
 
 ᎾᏍᎩᎾᎢ ᎤᏟ ᎢᎦᎢ ᎠᏓᏃᎯᏎᏗ, ᎠᎪᏩᏛᏗ [[Joe Byrd (ᏣᎳᎩ ᎤᎬᏫᏳᎯ)]].
 
