--- a/ᏣᎳᎩ.mw
+++ b/ᏣᎳᎩ.mw
@@ -229,7 +229,7 @@ W. W. Keeler ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ [[1949
 
 ==ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ==
 *[http://www.lostworlds.org/ocmulgee_videos.html LostWorlds.org | Cherokee Traditional Dancing Videos]
-*[http://www.cherokee.org The Cherokee Nation]
+*[http://www.cherokee.org ᏣᎳᎩᎯ ᎠᏰᎵ]
 *[http://www.unitedkeetoowahband.org/ United Keetoowah Band]
 *[http://www.cherokee-nc.com/ Eastern Band of Cherokee Indians (official site)]
 *[http://www.lostcherokeenation.com The Lost Cherokee Nation of Arkansas and Missouri] (nota ᎠᎦᏎᏍᏙᏗ: ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏬᎳᏨ ᎠᏂᎳᏍᏓᎸ)
