Undo revision 19360 by [[Special:Contributions/85.187.228.107|85.187.228.107]] ([[User talk:85.187.228.107|talk]])

--- a/ᏗᎭᏄᎧᎯ.mw
+++ b/ᏗᎭᏄᎧᎯ.mw
@@ -1,12 +1,52 @@
+[[File:Perenoel1875-1-crop.png|thumb|right|ᏗᏍᏔᏲᎯ]]'''ᏗᏍᏔᏲᎯ''': ᏓᏂᏍᏔᏲᎯᎲᎢ! ᎣᏍᏓ,ᎤᏲᎢ:ᎪᎵᎦ. ᎥᏍᎩᎦ ᎠᏓᏪᎯ.
 
+{{stub}}
 
-[[als:Weihnachtsmanar doen]]
-[[arm; Dzumer papik
-[[az:Santa Klauslen
+[[als:Weihnachtsmann]]
+[[ar:بابا نويل]]
+[[az:Santa Klaus]]
+[[bg:Дядо Коледа]]
 [[bn:সান্টাক্লজ]]
-[[cs:Santa Claus]]ᎠᎢᏆᏨᏍᏊᎵᏔ
-
+[[cs:Santa Claus]]
+[[da:Julemanden]]
+[[de:Weihnachtsmann]]
 [[el:Άγιος Βασίλης]]
 [[en:Santa Claus]]
-
+[[eo:Kristnaska Viro]]
+[[et:Jõuluvana]]
+[[eu:Bizar Zuri (Santa Claus)]]
+[[fa:بابا نوئل]]
+[[fi:Joulupukki]]
+[[fo:Jólamaðurin]]
+[[gd:Bodach na Nollaig]]
+[[he:סנטה קלאוס]]
+[[hr:Djed Božićnjak]]
+[[hu:Mikulás]]
+[[is:Jólasveinn]]
+[[it:Babbo Natale]]
+[[ja:サンタクロース]]
+[[ka:სანტა კლაუსი]]
+[[kn:ಸಾಂಟಾ ಕ್ಲಾಸ್]]
+[[ko:산타 클로스]]
+[[la:Pater Natalis]]
+[[lt:Kalėdų Senelis]]
+[[ml:സാന്റാക്ലോസ്]]
+[[ms:Santa Claus]]
+[[nds-nl:Kìrstman]]
+[[nl:Kerstman]]
+[[nn:Julenissen]]
+[[no:Julenissen]]
+[[pl:Święty Mikołaj (kultura masowa)]]
+[[pt:Papai Noel]]
+[[ro:Moş Crăciun]]
+[[ru:Санта-Клаус]]
+[[simple:Santa Claus]]
+[[sl:Božiček]]
+[[sv:Jultomten]]
 [[th:ซานตาคลอส]]
+[[tr:Noel Baba]]
+[[uk:Санта Клаус]]
+[[uz:Santa Klaus]]
+[[vi:Ông già Noel]]
+[[zh:圣诞老人]]
+[[zh-min-nan:Sèng-tàn Lāu-lâng]]
