--- a/ᏫᎩᏇᏗᏯ.mw
+++ b/ᏫᎩᏇᏗᏯ.mw
@@ -214,4 +214,5 @@
 [[zh:维基百科]]
 [[zh-classical:維基大典]]
 [[zh-min-nan:Wikipedia]]
-[[zh-yue:維基百科]]
+[[ZH-YUE:維基百科]]
+[[En:Wikipedia The Free Encyclopedia]]
