robot Modifying: [[ro:Brevet de invenție]]

--- a/ᎪᎷᏩᏛᎲ_ᎢᎬᏁᏗ.mw
+++ b/ᎪᎷᏩᏛᎲ_ᎢᎬᏁᏗ.mw
@@ -223,7 +223,7 @@
 [[no:Patent]]
 [[pl:Patent]]
 [[pt:Patente]]
-[[ro:Brevet de invenţie]]
+[[ro:Brevet de invenție]]
 [[ru:Патент]]
 [[sh:Patent]]
 [[simple:Patent]]
