--- a/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
+++ b/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
@@ -1,4 +1,4 @@
-ᎠᎺᎢ (a-me-i) — ᎤᏴᏢᎢ-ᎠᎺᎵᎦ ᎠᏰᎵ ᎤᏙᏢᏒ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ-ᎢᏴ ᎠᎳᏍᎦᎶᏗ ᎨᏒ, ᎤᎭ ᎬᏩᏚᏫᏛ 290,000,000 ᎠᏂᎤᏁᎦ. ᏄᎬᏫᏳᏌᏕᎩ, ᏗᎧᏃᏩᏛᏍᏗ ᏓᏃᏢᏍᎬ, ᎠᎴ [[United States Supreme Court|ᏗᏓᏱᎵᏓᏍᏗ (Judicial)]] ᏧᏂᎸᏫᏍᏓᏁᏗ ᎨᎦᏓᏅᏖᎮᎯ ᎨᏒᎢ. [[ᎺᎯᎪ]] and [[ᎧᎾᏓ]].
+ᎠᎺᎢ (a-me-i) — ᎤᏴᏢᎢ-ᎠᎺᎵᎦ ᎠᏰᎵ ᎤᏙᏢᏒ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ-ᎢᏴ ᎠᎳᏍᎦᎶᏗ ᎨᏒ, ᎤᎭ ᎬᏩᏚᏫᏛ 290,000,000 ᎠᏂᎤᏁᎦ. ᏄᎬᏫᏳᏌᏕᎩ, ᏗᎧᏃᏩᏛᏍᏗ ᏓᏃᏢᏍᎬ, ᎠᎴ [[United States Supreme Court|ᏗᏓᏱᎵᏓᏍᏗ (Judicial)]] ᏧᏂᎸᏫᏍᏓᏁᏗ ᎨᎦᏓᏅᏖᎮᎯ ᎨᏒᎢ. [[ᎺᎯᎪ]] ᎠᎴ [[ᎧᎾᏓ]].
 
 [[File:Flag of the United States.svg|thumb]]
 [[File:Map of USA showing unlabeled state boundaries.png|thumb]]
