*Empty MediaWiki Message*

--- a/ᎨᎾᏓ.mw
+++ b/ᎨᎾᏓ.mw
@@ -1,6 +1,6 @@
 [[File:Flag of Canada.svg|thumb|250px|ᎧᎾᏓ]]
 
-'''ᎧᎾᏓ''' ([[ᏍᏆᏂ]] ᎦᏬᏂᎯᏍᏗ, ''Canada'') — ᎤᏴᏢᎢ-ᎠᎺᎵᎦ ᎠᏰᎵ ᎤᏙᏢᏒ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ-ᎢᏴ ᎠᎳᏍᎦᎶᏗ ᎨᏒ, ᎤᎭ ᎬᏩᏚᏫᏛ 107,000,000 ᎠᏂᎤᏁᎦ. ᏄᎬᏫᏳᏌᏕᎩ, ᏧᏂᎸᏫᏍᏓᏁᏗ ᎨᎦᏓᏅᏖᎮᎯ ᎨᏒᎢ. [[ᎠᎺᎢ]].
+'''ᎧᎾᏓ''' ([[ᎠᎦᎸᏥ]] ᎦᏬᏂᎯᏍᏗ, ''Canada'') — ᎤᏴᏢᎢ-ᎠᎺᎵᎦ ᎠᏰᎵ ᎤᏙᏢᏒ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ-ᎢᏴ ᎠᎳᏍᎦᎶᏗ ᎨᏒ, ᎤᎭ ᎬᏩᏚᏫᏛ 107,000,000 ᎠᏂᎤᏁᎦ. ᏄᎬᏫᏳᏌᏕᎩ, ᏧᏂᎸᏫᏍᏓᏁᏗ ᎨᎦᏓᏅᏖᎮᎯ ᎨᏒᎢ. [[ᎠᎺᎢ]].
 
 {{stub}}
 
