/* ᎤᏁᎳᏅᎯ ᎠᎴ ᏦᏕ */ new pic

--- a/ᎫᏔᏍᏲᏍᏗ.mw
+++ b/ᎫᏔᏍᏲᏍᏗ.mw
@@ -136,6 +136,7 @@ Between 100 and 150, [[List of Rosa species|ᎠᎪᏩᏛᏗ ᏙᎪᏩᎸ]]
 ===ᎤᏁᎳᏅᎯ ᎠᎴ ᏦᏕ===
 {{cleanup-list}}
 [[Image:Maidofhonor.JPG|thumb|right|ᎩᎦᎨ ᎢᏳᏍᏗ ᎠᏥᎸᏍᎩ: ᎠᏓᏙᎵᏍᏗ]]
+[[File:A rose 05be wp.jpg|thumb|]]
 [[Image:Frenchlace3.JPG|thumb|right|ᎤᏁᎬ: ᎤᏁᎳᏅ ᎤᏬᏢᏅ]]
 * ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᎦᎵᏓᏍᏛ mythologies, Ꮭ [[undead]] ᎠᎴ [[ghost|ᎠᏂᏣᏍᎩᎵ]]ly ᏕᏁᎳᏅᎯ (ᎾᏍᎩᎾ ᎨᏒ [[vampires|ᏄᏁᎸᎾ]]) ᎠᎾᏍᎬᏘ ᏓᏓᎿᏩᏍᏛ ᎯᎠ ᎤᏍᏗ ᎦᏅᏅ ᎨᏯᏔᎯ ᎠᏥᎸᏍᎩ. ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏁᎵᏒ Ꮎ ᎾᎿᎢ ᎨᏯᏔᎯ ᎠᏥᎸᏍᎩ ᎾᎿ ᎤᏲᎱᏒ ᎦᎸᏙᏗ ᏝᏱᎪᎯᎩ ᎤᏲᎱᏒᎯ ᎠᏏᏴᏫ ᏯᏓᎢᏗᏏ ᎠᎴᏫᏍᏔᏅ ᎠᏂ ᏂᏛᎴᏅᏓ ᎠᎵᏌᎳᏗᏍᎬ ᎠᏏᏇ.
 * ᎣᏂ ᏧᏩᎫᏛ ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ itsuwakodi, ᎯᎠ ᎠᏥᎸᏍᎩ ᎤᎭ ᏭᏪᏙᎢ ᎤᏂᎧᏁᏍᏙᏗ ᎡᎷᏪᎢ: 
