--- a/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
+++ b/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
@@ -2,6 +2,13 @@
 
 {{Template:ᏫᎩᏇᏗᏯ:ᎾᎥ ᏄᎾᏓᎸ ᎾᎿᎢ}}
 
+== connectivity project ==
+Hallo, my name is Anastasiya Lvova, I'm "duty" in [http://toolserver.org/~lvova/cgi-bin/go.sh?language=chr&interface=en&listby=zns Connectivity project]. The essence of the "Connectivity" project is to study and [http://toolserver.org/~lvova/cgi-bin/go.sh enhance] the coherence of Wikipedia, or, in other words, to improve hypertext navigation between articles. The project deals with deadends, isolated articles, non-categorized articles, transitivity of the category tree, etc.
+
+We want to work with your language version, but we need configured MediaWiki:Disambiguationspage for it (with direct links to template namespace pages, for example, [[:ru:MediaWiki:Disambiguationspage]]/[[:de:MediaWiki:Disambiguationspage]]/[[:fr:MediaWiki:Disambiguationspage]]). Is it possible to set it up for our usage? 
+
+thanks in advance, [[User:Lvova|Lvova]] 18:53, 12 DᎡᎭᎷᏱ 2010 (UTC)
+
 ==Page Text Editing==
 We need to be on the lookout for bad tranlations into cherokee. There tends to be many words translated improperly. Sometimes this is an improper verb form or a verb put where there should be a noun and vice versa. This probably due to the fact that many dictionaries are incomplete. and example would be "run" this could be many things in English (a run in fabric, different verbal meaning such as fast movement with the feet, or the act of controlling a business or group). I don't always know the correct cherokee words either, but i recogize incorrect ones simply because i know what they mean or i use them. when i see something from one of the documents i will be more specific. Peace and love to all.
 
