*Empty MediaWiki Message*

--- a/ᏧᎵᏍᏓᎾᎵ.mw
+++ b/ᏧᎵᏍᏓᎾᎵ.mw
@@ -118,7 +118,7 @@
 [[ko:메기목]]
 [[la:Siluriformes]]
 [[lt:Šamažuvės]]
-[[lv:Sams]]
+[[lv:Samveidīgie]]
 [[ms:Ikan Keli]]
 [[nl:Meervalachtigen]]
 [[no:Maller]]
