--- a/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
+++ b/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
@@ -338,6 +338,14 @@ Yours very truly,
 Volunteer Coordinator</br>
 Wikimedia Foundation
 
+==Bot flag for Diego Grez Bot==
+* Bot [[User:Diego Grez Bot]]
+* Operator [[User:Diego Grez]]
+* Function: Interwiki
+* Code: pywikipedia
+* [http://toolserver.org/~vvv/sulutil.php?user=Diego_Grez_Bot Flagged on several other wikis].
+* Comment. Gonna do some test edits. Thanks! [[User:Diego Grez|Diego Grez]] 21:14, 12 July 2010 (UTC)
+
 [[ang:Ƿicipǣdia:Þorpes Ƿiella]]
 [[cv:Broken/Канашлу]]
 [[de:Wikipedia:Fragen zur Wikipedia]]
