--- a/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
+++ b/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
@@ -348,6 +348,7 @@ Wikimedia Foundation
 
 [[ang:Ƿicipǣdia:Þorpes Ƿiella]]
 [[cv:Broken/Канашлу]]
+[[en:Wikipedia:Community Portal]]
 [[de:Wikipedia:Fragen zur Wikipedia]]
 [[fi:Wikipedia:Kahvihuone]]
 [[lad:Vikipedia:Kafe]]
