--- a/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
+++ b/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
@@ -347,7 +347,7 @@ Wikimedia Foundation
 * Comment. Gonna do some test edits. Thanks! [[User:Diego Grez|Diego Grez]] 21:14, 12 July 2010 (UTC)
 
 == Article request ==
-I started [[:en:Cherokee_Central_Schools]] in English. This subject is of local interest, and it has its own Cherokee name, [[ᏣᎳᎩ ᎫᎾᏕᎶᏆᏍᏗ ᏚᏓᏥᏍᎬᎢ]] - Would someone mind writing an article about this? Also the Cherokee caption of [[:File:Cherokee Central Schools.jpg]] on the Commons needs to be expanded to include all of the meaning of the English description. Thank you [[User:WhisperToMe|WhisperToMe]] 15:59, 14 July 2010 (UTC)
+I started [[:en:Cherokee_Central_Schools]] in English. This subject is of local interest, and it has its own Cherokee name, [[ᏣᎳᎩ ᎫᎾᏕᎶᏆᏍᏗ ᏚᏓᏥᏍᎬᎢ]] - Would someone mind writing an article about this? Also the Cherokee caption of [[:File:Cherokee Central Schools.jpg]] on the Commons needs to be expanded to include all of the meaning of the English description. - Also [[:Cherokee, North Carolina]] needs an article written in Cherokee. Thank you [[User:WhisperToMe|WhisperToMe]] 15:59, 14 July 2010 (UTC)
 [[ang:Ƿicipǣdia:Þorpes Ƿiella]]
 [[cv:Broken/Канашлу]]
 [[en:Wikipedia:Community Portal]]
