--- a/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
+++ b/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
@@ -350,6 +350,8 @@ Fine with me :) --[[User:Ooswesthoesbes|Ooswesthoesbes]] 08:42, 19 July 2010 (UT
 
 == Article request ==
 I started [[:en:Cherokee_Central_Schools]] in English. This subject is of local interest, and it has its own Cherokee name, [[ᏣᎳᎩ ᎫᎾᏕᎶᏆᏍᏗ ᏚᏓᏥᏍᎬᎢ]] - Would someone mind writing an article about this? Also the Cherokee caption of [[:File:Cherokee Central Schools.jpg]] on the Commons needs to be expanded to include all of the meaning of the English description. - Also [[:Cherokee, North Carolina]] needs an article written in Cherokee. Thank you [[User:WhisperToMe|WhisperToMe]] 15:59, 14 July 2010 (UTC)
+:I've done my best to help you. More I can't do :( --[[User:Ooswesthoesbes|Ooswesthoesbes]] 08:51, 19 July 2010 (UTC)
+
 [[ang:Ƿicipǣdia:Þorpes Ƿiella]]
 [[cv:Broken/Канашлу]]
 [[en:Wikipedia:Community Portal]]
