--- a/ᏎᎵᎾ.mw
+++ b/ᏎᎵᎾ.mw
@@ -1,5 +1,5 @@
 [[File:Selena22.jpg|thumb|ᏎᎴᏀ.]]
-'''ᏎᎴᏀ''' (''Selena'')
+'''ᏎᎴᏀ''' ('''Selena Quintanilla-Pérez''': ''Selena'', ᎫᏬᏂ 16, 1971 – ᎠᎾᏱᎵᏒ 31, 1995).
 
 [[af:Selena]]
 [[ak:Selena]]
