--- a/User.mw
+++ b/User.mw
@@ -1,6 +1,6 @@
-ᏣᏁᏆ ᎢᏡᎬ ᎠᏁᎯ ᏩᎶᏏ ᏫᏓᏁᏋ ᏕᏡᎬ ᎠᏁᎯ ᏩᎶᏏ.
-ᎯᏍᎩ ᏱᏏᏔᏗᏍᏗ ᎤᎶᏒᏍᏗᎴ ᏱᎩ ᏱᏗᏂᏅᎯᏓ ᏱᏓᎾᏛᎯ.
-ᏚᎦᏥᎴᏍᏛ ᏓᏂᏰᏌᏛ ᏃᎴ ᏓᏂᎿᏌᏓ ᏚᏂᏍᏕᎵᏍᎪ ᏕᏡᎬ
-ᏓᏂᎴᎬ. ᎠᎹᏱ ᎡᎳᏗ ᏓᏂᎲᏍᎪ ᏧᏪᏥ. ᏘᎩᏥ
-ᎠᎾᏕᎲᏍᎪ ᏓᎾᏛᏏᏒ ᏗᏂᏅᏍᎨᏂ ᏓᏙᏢᏍᎪ ᏃᏭᏃ ᎦᏙ
-ᏗᏜ ᎾᎾᏛᎾᏗᏍᎪ ᏃᏭ ᏧᎾᏔᎾ ᏫᎾᎾᎵᏍᏗᏍᎪᎢ.
+ᎬᎿᎨ ᏧᎶᏟᏗ ᏢᏓᏥ ᏫᏓᏁᏋ ᏪᏌ ᏏᏓᏁᎸ ᎨᏒ. ᏂᎦᏓᏊᏳᏍᏗ
+ᎤᏍᎪᎸ ᎠᏓᎶᏂᎨ, ᏗᎬᎿᎨᏅ ᏧᎶᏟᏗ - ᏝᏅ ᎠᏂᏔᎵ ᎤᏂᏠᏱ ᏱᎨᏐ
+ᏚᏂᎶᏟᏛᎢ. ᎬᎿᎨ ᏧᎶᏟᏗ ᏢᏓᏥ ᎪᎳᎭ ᎤᏍᎧ ᏂᏚᏍᏗ ᏗᎪᏍᏓᏱ
+ᏕᎦᎾᏙᎬ, ᏓᏤᏢ ᎤᏂᎩᏍᏗ ᎤᏂᏂᏴᏓ ᎠᎭᏫ, ᎨᏯᏔ ᏩᎦ, ᎨᏯᏔᏃ
+ᏏᏆ. ᎬᎿᎨ ᏧᎶᏟᏗ ᏢᏓᏥ ᎤᏍᎦᏎᏗ ᎤᏪᏡᎬ, ᏔᎵ ᏳᏟᎶᏓ Ᏼ
+ᏴᏛᎬᎠ ᏂᎦᏪᏍᎬᎢ.
