--- a/User.mw
+++ b/User.mw
@@ -1,6 +1,4 @@
-ᎬᎿᎨ ᏧᎶᏟᏗ ᏢᏓᏥ ᏫᏓᏁᏋ ᏪᏌ ᏏᏓᏁᎸ ᎨᏒ. ᏂᎦᏓᏊᏳᏍᏗ
-ᎤᏍᎪᎸ ᎠᏓᎶᏂᎨ, ᏗᎬᎿᎨᏅ ᏧᎶᏟᏗ - ᏝᏅ ᎠᏂᏔᎵ ᎤᏂᏠᏱ ᏱᎨᏐ
-ᏚᏂᎶᏟᏛᎢ. ᎬᎿᎨ ᏧᎶᏟᏗ ᏢᏓᏥ ᎪᎳᎭ ᎤᏍᎧ ᏂᏚᏍᏗ ᏗᎪᏍᏓᏱ
-ᏕᎦᎾᏙᎬ, ᏓᏤᏢ ᎤᏂᎩᏍᏗ ᎤᏂᏂᏴᏓ ᎠᎭᏫ, ᎨᏯᏔ ᏩᎦ, ᎨᏯᏔᏃ
-ᏏᏆ. ᎬᎿᎨ ᏧᎶᏟᏗ ᏢᏓᏥ ᎤᏍᎦᏎᏗ ᎤᏪᏡᎬ, ᏔᎵ ᏳᏟᎶᏓ Ᏼ
-ᏴᏛᎬᎠ ᏂᎦᏪᏍᎬᎢ.
+ᏕᏡᎬ, ᏧᏏᏫᏃ ᏓᏓᏁᎸ ᏓᏂᏁᎶ ᎤᎫᎫ. ᏥᏍᏕᏥ ᏓᏂᏰᏍᎪᎢ. ᏧᏔᎾ
+ᏧᎩᏓᏟ, ᎤᏃᎴ ᎬᏩᎶᎯᏍᏗ, ᏓᏐᏰᏍᎬ ᎢᏝᏪ ᎨᏐ ᎦᏃᎯᎵᏒ.
+ᏗᏍᏆᎳᎯᎨᏍᏗᏅ ᏚᎩᏓᏢ ᎤᏍᏕᎵᏍᎪ ᎠᏫᏗᏍᎪ ᎤᏃᏴᎬ ᎦᎴᏂᏗᏜ.
+ᎧᏴᏎᏆᎪᏍᏓᏯ ᎤᏍᏕᎵᏍᎪ ᎤᎫᎫ ᎦᏣᎦᎸᏍᎬ ᎭᏫᏯᎢ
