--- a/User.mw
+++ b/User.mw
@@ -1,4 +1,5 @@
-ᏕᏡᎬ, ᏧᏏᏫᏃ ᏓᏓᏁᎸ ᏓᏂᏁᎶ ᎤᎫᎫ. ᏥᏍᏕᏥ ᏓᏂᏰᏍᎪᎢ. ᏧᏔᎾ
-ᏧᎩᏓᏟ, ᎤᏃᎴ ᎬᏩᎶᎯᏍᏗ, ᏓᏐᏰᏍᎬ ᎢᏝᏪ ᎨᏐ ᎦᏃᎯᎵᏒ.
-ᏗᏍᏆᎳᎯᎨᏍᏗᏅ ᏚᎩᏓᏢ ᎤᏍᏕᎵᏍᎪ ᎠᏫᏗᏍᎪ ᎤᏃᏴᎬ ᎦᎴᏂᏗᏜ.
-ᎧᏴᏎᏆᎪᏍᏓᏯ ᎤᏍᏕᎵᏍᎪ ᎤᎫᎫ ᎦᏣᎦᎸᏍᎬ ᎭᏫᏯᎢ
+ᏥᏯ ᎠᏁᎰ ᏚᏪᏴ, ᏧᏍᏗ ᏚᏪᏴ, ᎠᎹᏱᏃ ᎤᎦᏄᎸᏒ, ᎤᎿᏅ ᎠᏂᏃᎯᎵᏙᎰ
+ᎠᏣᏗ, ᏧᎾᏍᏗ ᏍᎪᏱ, ᎢᏧᎳ ᎠᏁᎯ, ᏧᎾᏍᏗᏃ ᏗᎾᏓᏍᏛᏍᎩ.
+ᏗᎪᏍᏓᏱ ᏓᏂᎾᏙᎦ ᎤᏂᎩᏍᏗ ᎤᏂᏃᎵᏙᎸ. ᏥᏯ ᎡᎵᏊ ᏱᏓᎳᎬᏯ
+ᏦᎢ ᎠᎴ ᏅᎩ ᎢᏯᏔᏬᏍᏔᏅ, ᎩᎳ ᎠᎵᏌᎳᏗᏍᎪ ᎠᎹᏱ ᎿᏊ
+ᎤᎭᏬᎳᏕᏍᏗ ᎤᏃᎴᎢ.
