--- a/User.mw
+++ b/User.mw
@@ -1,5 +1,5 @@
-ᏥᏯ ᎠᏁᎰ ᏚᏪᏴ, ᏧᏍᏗ ᏚᏪᏴ, ᎠᎹᏱᏃ ᎤᎦᏄᎸᏒ, ᎤᎿᏅ ᎠᏂᏃᎯᎵᏙᎰ
-ᎠᏣᏗ, ᏧᎾᏍᏗ ᏍᎪᏱ, ᎢᏧᎳ ᎠᏁᎯ, ᏧᎾᏍᏗᏃ ᏗᎾᏓᏍᏛᏍᎩ.
-ᏗᎪᏍᏓᏱ ᏓᏂᎾᏙᎦ ᎤᏂᎩᏍᏗ ᎤᏂᏃᎵᏙᎸ. ᏥᏯ ᎡᎵᏊ ᏱᏓᎳᎬᏯ
-ᏦᎢ ᎠᎴ ᏅᎩ ᎢᏯᏔᏬᏍᏔᏅ, ᎩᎳ ᎠᎵᏌᎳᏗᏍᎪ ᎠᎹᏱ ᎿᏊ
-ᎤᎭᏬᎳᏕᏍᏗ ᎤᏃᎴᎢ.
+ᎠᏓᏢᎢᎯ ᏧᏁᎳ ᏗᎦᏃᎨᏂ ᏂᏚᏅᎿ, ᏔᎵᏃ ᏧᏓᏅᏂ ᎤᏁᏍᏩᏄᏍᏗ
+ᎢᏳᏍᏗ ᏂᏚᏅᎿ ᎤᎿᎢ. ᎯᎢᎾ ᏗᏂᏃᎨᏂ ᏓᏅᏗᏍᎪ ᎠᎺᏉ ᎠᏲᏓᏝᎲ
+ᎠᏁᏙᎲᎢ. ᎪᎱᏍᏗ ᎡᏍᎦ ᏯᎾᏕᎳᎰᏍᎦ, ᎠᏂᏅᎪᏫᏍᎪ ᎤᎵᏏᎩ
+ᎤᎵᏑᏫᏓ ᎪᎱᏍᏗ, ᎤᎿ ᎠᎾᏗᏍᎦᏢᏍᎪᎢ. ᎠᏂᎰᎵ ᎠᏅᏗᏍᎬ
+ᏓᏂᏔᎴᏍᎪ ᏍᏓᏯ ᏓᎬᎾ ᏯᎦᏣᎦᎸᏯ ᎦᏃᎵᏙᎲᎢ.
