--- a/User.mw
+++ b/User.mw
@@ -1,5 +1,6 @@
-ᎠᏓᏢᎢᎯ ᏧᏁᎳ ᏗᎦᏃᎨᏂ ᏂᏚᏅᎿ, ᏔᎵᏃ ᏧᏓᏅᏂ ᎤᏁᏍᏩᏄᏍᏗ
-ᎢᏳᏍᏗ ᏂᏚᏅᎿ ᎤᎿᎢ. ᎯᎢᎾ ᏗᏂᏃᎨᏂ ᏓᏅᏗᏍᎪ ᎠᎺᏉ ᎠᏲᏓᏝᎲ
-ᎠᏁᏙᎲᎢ. ᎪᎱᏍᏗ ᎡᏍᎦ ᏯᎾᏕᎳᎰᏍᎦ, ᎠᏂᏅᎪᏫᏍᎪ ᎤᎵᏏᎩ
-ᎤᎵᏑᏫᏓ ᎪᎱᏍᏗ, ᎤᎿ ᎠᎾᏗᏍᎦᏢᏍᎪᎢ. ᎠᏂᎰᎵ ᎠᏅᏗᏍᎬ
-ᏓᏂᏔᎴᏍᎪ ᏍᏓᏯ ᏓᎬᎾ ᏯᎦᏣᎦᎸᏯ ᎦᏃᎵᏙᎲᎢ.
+ᏢᏓᏥ ᎤᎾᏓᏡᎬ ᎠᏁᎰᎢ. ᎠᏂᏨᏯ ᎤᏅᏌ ᏍᏈᏍᏗ ᎦᏅᎯᏓ ᎤᏂᏂᏈᏡ
+ᎠᏂᏍᎪᎵ ᏗᏜ. ᎠᏂᎩᏌ ᎠᏂᏃᎯᎵᏙᎯ ᎨᏐ ᎤᎾᏓᏡᎬ. ᏓᎾᎵᏍᏕᎵᏍᎪ
+ᏓᏂᏃᎵᏙᎲ ᏧᏂᎶᏟᏗ ᏐᏈᎵ ᎠᎴ ᏧᎾᏓᎴᏅᏓ ᏐᏈᎵ ᎢᏳᏍᏗ ᎠᏫᏃ
+ᎤᏂᏠᏱ. ᏧᎾᏓᏣᏳᏍᏙᏗ ᏂᏚᏅᏅ ᎤᏂᏍᏕᎵᏍᎪ ᎤᏂᏂᏴᏗ ᎠᏂᏃᎵᏙᎲ,
+ᎤᎾᏓᎾᏫᏍᏙᏗᏅᏊ. ᎭᏫᏯᎭ ᏂᏚᏍᏛ ᏧᎾᎳᏏᏕᏂ ᎤᏂᏍᏕᎵᏍᎪ
+ᎢᏝᏪ ᎤᏂᏃᎵᏓᏍᏗᎢ.
