--- a/User.mw
+++ b/User.mw
@@ -1,6 +1,4 @@
-ᏢᏓᏥ ᎤᎾᏓᏡᎬ ᎠᏁᎰᎢ. ᎠᏂᏨᏯ ᎤᏅᏌ ᏍᏈᏍᏗ ᎦᏅᎯᏓ ᎤᏂᏂᏈᏡ
-ᎠᏂᏍᎪᎵ ᏗᏜ. ᎠᏂᎩᏌ ᎠᏂᏃᎯᎵᏙᎯ ᎨᏐ ᎤᎾᏓᏡᎬ. ᏓᎾᎵᏍᏕᎵᏍᎪ
-ᏓᏂᏃᎵᏙᎲ ᏧᏂᎶᏟᏗ ᏐᏈᎵ ᎠᎴ ᏧᎾᏓᎴᏅᏓ ᏐᏈᎵ ᎢᏳᏍᏗ ᎠᏫᏃ
-ᎤᏂᏠᏱ. ᏧᎾᏓᏣᏳᏍᏙᏗ ᏂᏚᏅᏅ ᎤᏂᏍᏕᎵᏍᎪ ᎤᏂᏂᏴᏗ ᎠᏂᏃᎵᏙᎲ,
-ᎤᎾᏓᎾᏫᏍᏙᏗᏅᏊ. ᎭᏫᏯᎭ ᏂᏚᏍᏛ ᏧᎾᎳᏏᏕᏂ ᎤᏂᏍᏕᎵᏍᎪ
-ᎢᏝᏪ ᎤᏂᏃᎵᏓᏍᏗᎢ.
+ᏗᎧᎸᎬᏗᏜ ᎡᎳᏗᏜ ᎠᏁᎰᎢ ᎠᏂᎪᏩᎳ ᏲᎾ. ᎾᎪᎯᎸᏊ ᎠᏁᎲ
+ᏕᏡᎬ ᏚᎾᎩᎶᎢ, ᏓᏂᎩᏍᎬ ᏚᎵᏍᏚᏒᎢ. ᏧᏃᏰᏂ ᏳᏍᏗ ᏚᏙᏢᏐ
+ᏚᏩᏂᎦᏢ ᏧᏂᏂᏴᏗ. ᎠᏂᎪᏩᎳ ᏲᎾ ᎣᏍᏓ ᎨᏐ ᎤᏂᏩᏒᏍᏗ, ᎥᏍᎩᏅ
+ᎤᏂᏍᏕᎵᏍᎪ ᎤᎾᏕᎳᎰᎯᏍᏗ ᏫᎬᏩᏓᎯᏍᏗ ᏱᎩ ᏚᎵᏍᏚᏒᎢ.
