--- a/User.mw
+++ b/User.mw
@@ -1,4 +1,4 @@
-ᏗᎧᎸᎬᏗᏜ ᎡᎳᏗᏜ ᎠᏁᎰᎢ ᎠᏂᎪᏩᎳ ᏲᎾ. ᎾᎪᎯᎸᏊ ᎠᏁᎲ
-ᏕᏡᎬ ᏚᎾᎩᎶᎢ, ᏓᏂᎩᏍᎬ ᏚᎵᏍᏚᏒᎢ. ᏧᏃᏰᏂ ᏳᏍᏗ ᏚᏙᏢᏐ
-ᏚᏩᏂᎦᏢ ᏧᏂᏂᏴᏗ. ᎠᏂᎪᏩᎳ ᏲᎾ ᎣᏍᏓ ᎨᏐ ᎤᏂᏩᏒᏍᏗ, ᎥᏍᎩᏅ
-ᎤᏂᏍᏕᎵᏍᎪ ᎤᎾᏕᎳᎰᎯᏍᏗ ᏫᎬᏩᏓᎯᏍᏗ ᏱᎩ ᏚᎵᏍᏚᏒᎢ.
+ᎠᏂᎩᎦᎨ ᎤᎾᏜᏩᏗ ᎠᏁᎰ ᎡᎳᏗᏜ, ᎾᎥᏃ ᏚᎦᏚᏛᎢ. ᏳᎾᏕᎿ
+ᎠᏂᏓ ᎤᎾᏜᏩᏗ, ᏧᎾᏍᏗ ᎨᏐ, ᎡᎵᏊ ᎦᏅᎯᏓ ᎤᏁᎦ ᏚᏯ
+ᎨᏐᎢ. ᎩᎳᏊᏅᏴ ᎤᏥ ᎤᏜᏩᏛ ᏩᏴᎯᎰ, Ꮲ ᏧᏁᎳ ᏯᏅᏓ
+ᎢᎪᎯᏓ ᎠᏛᏍᎬ ᎢᎪᎯᏓ.
