--- a/User.mw
+++ b/User.mw
@@ -1,4 +1,5 @@
-ᎠᏂᎩᎦᎨ ᎤᎾᏜᏩᏗ ᎠᏁᎰ ᎡᎳᏗᏜ, ᎾᎥᏃ ᏚᎦᏚᏛᎢ. ᏳᎾᏕᎿ
-ᎠᏂᏓ ᎤᎾᏜᏩᏗ, ᏧᎾᏍᏗ ᎨᏐ, ᎡᎵᏊ ᎦᏅᎯᏓ ᎤᏁᎦ ᏚᏯ
-ᎨᏐᎢ. ᎩᎳᏊᏅᏴ ᎤᏥ ᎤᏜᏩᏛ ᏩᏴᎯᎰ, Ꮲ ᏧᏁᎳ ᏯᏅᏓ
-ᎢᎪᎯᏓ ᎠᏛᏍᎬ ᎢᎪᎯᏓ.
+ᎯᎠᎾ ᏗᎦᏅᎯᏓ ᏗᏂᏅᏌᏗ ᏫᏅ ᏱᎦᏘ ᎡᎶᎯ ᎡᎯ ᎡᎿᎢ. ᏧᎾᏔᎾ
+ᏧᎾᎧᏅᏍᏕᎾ ᏐᏁᎳᏚ ᏱᎳᏏᏗ (ᏑᏓᎵ ᏯᏟᎶᏓ) ᏱᏗᎾᏘ ᎾᎥ ᎾᎾᎵᏍᏗᏍᎪ.
+ᎡᎳᏗᎨ ᏗᏜ ᎬᎿᎨᏍᏛ ᎠᏁᎰ ᏗᏂᎦᎵᏍᏚᎩᏍᎩ ᎤᎿᏃ ᏚᎵᏍᏚᏒ ᏧᏍᏗ
+ᏚᏩᏂᎦᏢ ᏃᎴ ᎠᏓ ᏚᏯᎸ ᏓᏂᎩᏍᎪᎢ. ᏗᎦᏅᎯᏓ ᏗᏂᎾᎪ ᏃᎴ ᏗᏂᏴᏤᏂ
+ᏚᏂᏍᏕᎵᏍᎪ ᎦᏚ ᏗᏜ ᏕᏡᎬ ᏫᏚᏂᎾᏌᏁᏍᏗᎢ.
