--- a/User.mw
+++ b/User.mw
@@ -1,5 +1,5 @@
-ᎯᎠᎾ ᏗᎦᏅᎯᏓ ᏗᏂᏅᏌᏗ ᏫᏅ ᏱᎦᏘ ᎡᎶᎯ ᎡᎯ ᎡᎿᎢ. ᏧᎾᏔᎾ
-ᏧᎾᎧᏅᏍᏕᎾ ᏐᏁᎳᏚ ᏱᎳᏏᏗ (ᏑᏓᎵ ᏯᏟᎶᏓ) ᏱᏗᎾᏘ ᎾᎥ ᎾᎾᎵᏍᏗᏍᎪ.
-ᎡᎳᏗᎨ ᏗᏜ ᎬᎿᎨᏍᏛ ᎠᏁᎰ ᏗᏂᎦᎵᏍᏚᎩᏍᎩ ᎤᎿᏃ ᏚᎵᏍᏚᏒ ᏧᏍᏗ
-ᏚᏩᏂᎦᏢ ᏃᎴ ᎠᏓ ᏚᏯᎸ ᏓᏂᎩᏍᎪᎢ. ᏗᎦᏅᎯᏓ ᏗᏂᎾᎪ ᏃᎴ ᏗᏂᏴᏤᏂ
-ᏚᏂᏍᏕᎵᏍᎪ ᎦᏚ ᏗᏜ ᏕᏡᎬ ᏫᏚᏂᎾᏌᏁᏍᏗᎢ.
+ᎬᎿᎨᏍᏛ ᎠᏁᎯ ᎧᎹᎹ ᏫᏚᏁᏋ ᎡᎶᎯ ᎦᏙᎯ ᎠᏁᎯ ᎠᏁᎿᎢ.
+ᏗᎦᏅᎯᏓ ᏓᏂᏴᏌᏛ ᏓᏅᏗᏍᎪ ᎤᏠᏱᏭ ᏧᏃᏰᎾ. ᎠᎹ
+ᎠᏂᎫᎩᏍᏗᏍᎪ ᎤᎾᏗᏔᏍᏗ ᏃᏊᎴ ᎤᏅᏌ ᎠᎹ ᏓᎾᎵᏍᏚᏟᏍᏗᏍᎪ
+ᎤᏁᏌᏴᏜ ᏳᎵᏍᏙᏗ, ᏃᎴ ᏑᎵᏍᏚᏒ ᏱᏓᏂᎾᏌᏁᎩ ᏧᏓᎴᏅᏓ ᎤᏂᏙᏗ
+ᎠᏂᏴᏌᏛᎢ.
