--- a/User.mw
+++ b/User.mw
@@ -1,5 +1,4 @@
-ᎬᎿᎨᏍᏛ ᎠᏁᎯ ᎧᎹᎹ ᏫᏚᏁᏋ ᎡᎶᎯ ᎦᏙᎯ ᎠᏁᎯ ᎠᏁᎿᎢ.
-ᏗᎦᏅᎯᏓ ᏓᏂᏴᏌᏛ ᏓᏅᏗᏍᎪ ᎤᏠᏱᏭ ᏧᏃᏰᎾ. ᎠᎹ
-ᎠᏂᎫᎩᏍᏗᏍᎪ ᎤᎾᏗᏔᏍᏗ ᏃᏊᎴ ᎤᏅᏌ ᎠᎹ ᏓᎾᎵᏍᏚᏟᏍᏗᏍᎪ
-ᎤᏁᏌᏴᏜ ᏳᎵᏍᏙᏗ, ᏃᎴ ᏑᎵᏍᏚᏒ ᏱᏓᏂᎾᏌᏁᎩ ᏧᏓᎴᏅᏓ ᎤᏂᏙᏗ
-ᎠᏂᏴᏌᏛᎢ.
+ᏃᏭᏃ ᏱᏙᏓᎦᏂᏴ ᏥᏍᏚ ᏃᏊᎴ ᏧᏝ ᎡᎳᏗᏜ ᎠᏕᏛᏍᎪᎢ ᎦᏣᏄᎳ
+ᎠᏟᏫᏗᏍᎩ ᏓᎶᏂᎨᏍᏙᏗ ᎠᏬᎭᎵ. ᎤᎵᏍᏈᏗ ᎧᏴᏍᎪᏍᏓᏯ,
+ᏗᎪᏍᏓᏱᏃ ᏚᏑᎦᏢ ᏚᏍᏕᎵᏍᎪ ᎤᏒᎦᎵᏗ ᎠᎴ ᎤᎦᎭᎷᏱᏍᏗ
+ᎤᏂᏴᏓ.
