ᏏᏆ ᏳᏂᏍᏗ ᎠᎹᏱ ᎠᏁᎯ

--- a/User.mw
+++ b/User.mw
@@ -1,4 +1,5 @@
-ᏃᏭᏃ ᏱᏙᏓᎦᏂᏴ ᏥᏍᏚ ᏃᏊᎴ ᏧᏝ ᎡᎳᏗᏜ ᎠᏕᏛᏍᎪᎢ ᎦᏣᏄᎳ
-ᎠᏟᏫᏗᏍᎩ ᏓᎶᏂᎨᏍᏙᏗ ᎠᏬᎭᎵ. ᎤᎵᏍᏈᏗ ᎧᏴᏍᎪᏍᏓᏯ,
-ᏗᎪᏍᏓᏱᏃ ᏚᏑᎦᏢ ᏚᏍᏕᎵᏍᎪ ᎤᏒᎦᎵᏗ ᎠᎴ ᎤᎦᎭᎷᏱᏍᏗ
-ᎤᏂᏴᏓ.
+ᏧᏔᏂ ᏏᏆ ᏳᏂᏍᏗ ᎠᎹᏱ ᎠᏁᎯ ᏛᏓᎸ ᏚᏪᏴ, ᎡᏉᏂᏃ ᎾᎥᏗᏜ
+ᎠᏁᎰᎢ. ᎤᏒᏃ ᏱᎩ ᎠᎹᏱ ᎠᎾᏚᎩᏍᎪ ᎦᏄᎸ ᎠᏂᎨᎪ. ᎢᎦᏱᎩ
+ᎠᎹᏱ ᎤᎾᏚᏐᎢ ᎤᎾᏣᏪᏐᎸᏍᏙ ᏗᏂᏍᎪᎵᏭᎢᎦ ᏚᎩᏌᏙ ᎦᏚ ᎠᎹᏱ.
+ᎠᎹᏱ ᎭᏫᏂ ᎠᎾᏕᎲᏍᎪ ᏧᎾᏍᏗ, ᎤᎾᏕᏃᏭ, ᎦᏚᏗᏜ ᎠᎹᏱ ᎠᏁᎪ
+ᎤᎿᏬᎳᏕᏍᏗᎢ.
