*Empty MediaWiki Message*

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -1,16 +1,16 @@
 ᎡᎶᏆ is a [[ᎡᏆᎦᏙᎯ]] <!-- continent --> ᎤᏗᎵᎬᏱ of [[ᎠᏏᎠ]] and ᎤᏴᏢᎢ of [[ᎠᎱᎵᎧ]] <!-- Africa -->. 
 [[File:LocationEurope.png|thumb|250px|ᎡᎶᏆ]]
-* [[ᏎᎸᏈᏯ]]/[[Russia]]
-* [[ᏳᎬᎳᎢᏅ]]/[[Ukraine]]
-* [[ᏇᎳᎷᏒ]]/[[Belarus]]
-* [[ᎼᎸᏙᏩ]]/[[Moldova]]
-* [[ᎶᎹᏂᏯ]]/[[Romania]]
-* [[Serbia]]
+* [[Russia]]
+* [[ᏳᎬᎳᎢᏅ/Yugvlainv]]
+* [[ᏇᎳᎷᏒ/Quelalusv]]
+* [[ᎼᎸᏙᏩ/Molvdoya]]
+* [[ᎶᎹᏂᏯ]/Lomaniya]
+* [[ᏎᎸᏈᏯ/Selvquiya]]
 * [[Croatia]]
 * [[Slovenia]]
-* [[ᎠᎸᏇᏂᏯ/Sgiquelise]]/Albania
-* [[ᎹᏎᏙᏂᏯ]]/[[Macedonia]]
-* [[ᏉᏍᏂᏯ]]/[[Bosnia]]
+* [[ᎠᎸᏇᏂᏯ/Sgiquelise]]
+* [[ᎹᏎᏙᏂᏯ]]
+* [[ᏉᏍᏂᏯ]]
 * [[Andorra|Anvdola]]
 * [[Armenia|Hayastani]]
 * [[Austria|Kalvgvditlv Ayeli]]
