*Empty MediaWiki Message*

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -4,7 +4,7 @@
 * [[ᏳᎬᎳᎢᏅ/Yugvlainv]]
 * [[ᏇᎳᎷᏒ/Quelalusv]]
 * [[ᎼᎸᏙᏩ/Molvdoya]]
-* [[ᎶᎹᏂᏯ]/Lomaniya]
+* [[ᎶᎹᏂᏯ]/Lomaniya]]
 * [[ᏎᎸᏈᏯ/Selvquiya]]
 * [[Croatia]]
 * [[Slovenia]]
