*Empty MediaWiki Message*

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -1,14 +1,14 @@
 ᎡᎶᏆ is a [[ᎡᏆᎦᏙᎯ]] <!-- continent --> ᎤᏗᎵᎬᏱ of [[ᎠᏏᎠ]] and ᎤᏴᏢᎢ of [[ᎠᎱᎵᎧ]] <!-- Africa -->. 
 [[File:LocationEurope.png|thumb|250px|ᎡᎶᏆ]]
 * [[Russia]]
-* [[ᏳᎬᎳᎢᏅ/Yugvlainv]]
-* [[ᏇᎳᎷᏒ/Quelalusv]]
-* [[ᎼᎸᏙᏩ/Molvdoya]]
-* [[ᎶᎹᏂᏯ]/Lomaniya]]
-* [[ᏎᎸᏈᏯ/Selvquiya]]
+* [[ᏳᎬᎳᎢᏅ]]
+* [[ᏇᎳᎷᏒ]]
+* [[ᎼᎸᏙᏩ]]
+* [[ᎶᎹᏂᏯ]]
+* [[ᏎᎸᏈᏯ]]
 * [[Croatia]]
 * [[Slovenia]]
-* [[ᎠᎸᏇᏂᏯ/Sgiquelise]]
+* [[ᎠᎸᏇᏂᏯ]]
 * [[ᎹᏎᏙᏂᏯ]]
 * [[ᏉᏍᏂᏯ]]
 * [[Andorra|Anvdola]]
