The file [[:Image:Location_Asia.svg]] has been replaced by [[:Image:Asia_(orthographic_projection).svg]] by administrator [[:commons:User:Kwj2772]]: ''exact or scaled-down duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/ᎡᏏᏱ.mw
+++ b/ᎡᏏᏱ.mw
@@ -1,4 +1,4 @@
-[[File:Location Asia.svg|right|120px|ᎠᏏᎠ]]ᎠᏏᎠ ...
+[[File:Asia_(orthographic_projection).svg|right|120px|ᎠᏏᎠ]]ᎠᏏᎠ ...
 
 * [[ᏥᎾ]]
 * [[ᏣᏆᏂ]]
